feat: localize backend strings and ai prompts

--- a/frontend/locales/ar.json
+++ b/frontend/locales/ar.json
@@ -1,4 +1,8 @@
-{
+﻿{
+  "abc": {
+    "no_revenue": "Aucun revenu généré sur la période.",
+    "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
+  },
   "accounting": {
     "amount": "المبلغ",
     "amount_placeholder": "0.00",
@@ -40,6 +44,7 @@
     "invalid_amount": "مبلغ غير صالح",
     "invoice_title": "فاتورة",
     "items_sold": "المنتجات المباعة",
+    "last_days_label": "{{count}} derniers jours",
     "loss_details": "تفاصيل الخسائر",
     "loss_reasons": "{{count}} سبب خسارة",
     "losses": "خسائر / تلفيات",
@@ -59,6 +64,14 @@
     "payment_methods": "المبيعات حسب طريقة الدفع",
     "payment_mobile_money": "Mobile Money",
     "payment_transfer": "تحويل",
+    "pdf_expenses_detail": "Détail des Charges",
+    "pdf_generation_error": "Erreur lors de la génération du rapport",
+    "pdf_gross_margin": "Marge brute",
+    "pdf_no_address": "Adresse non renseignée",
+    "pdf_no_expenses": "Aucune dépense sur cette période",
+    "pdf_top_products": "Top 10 Produits par Performance",
+    "pdf_total_expenses": "Total charges",
+    "pdf_total_revenue": "CA total",
     "period_label": "الفترة:",
     "product": "المنتج",
     "product_performance": "أداء المنتج",
@@ -233,6 +246,38 @@
       "countryLabel": "البلد: {{country}}"
     }
   },
+  "ai": {
+    "daily_summary_prompt": "Tu es Stockman AI. Voici les activités de la journée : {activity}. Fais un résumé très court (3-4 phrases) et motivant pour le commerçant.",
+    "persona_name": "Assistant Stockman",
+    "replenishment_advice_prompt": "Tu es un expert en logistique. Voici les produits critiques : {products}. Donne des conseils de réapprovisionnement basés sur les ventes récentes.",
+    "summary_goal": "Ton but est d’aider l’utilisateur à naviguer dans l’application ET à analyser son activité.",
+    "summary_instruction_admin": "SI L’UTILISATEUR EST ADMIN, COMMENCE TA PREMIÈRE RÉPONSE PAR UN BREF RÉSUMÉ DE LA SANTÉ DU SYSTÈME SI DES ALERTES SONT PRÉSENTES.",
+    "summary_role_admin": "Tu es l’assistant personnel de l’ADMINISTRATEUR de Stockman. Tu as accès aux métriques globales.",
+    "summary_role_merchant": "Tu es l’assistant intelligent expert de l’application Stockman pour les commerçants.",
+    "summary_tone": "Adopte un ton pédagogique, professionnel et chaleureux. Tes réponses doivent être complètes et explicatives.",
+    "tools": {
+      "inventory_alerts": {
+        "empty": "Aucune alerte de stock critique.",
+        "format": "{name}: Stock={quantity} (Min={min_stock})"
+      },
+      "system_alerts": {
+        "empty": "Santé du système d’administration excellente. Aucune alerte critique.",
+        "critical_login": "CRITICAL: {count} échecs de connexion détectés en 24h. Risque de Brute-force.",
+        "support_backlog": "ALERTE: Backlog support élevé ({count} tickets ouverts)."
+      },
+      "product_info": {
+        "not_found": "Aucun produit trouvé pour '{name}'.",
+        "status_out": "En rupture",
+        "status_in": "En stock"
+      },
+      "forecast": {
+        "not_found": "Produit '{name}' non trouvé pour l’analyse.",
+        "invalid_date": "Format de date invalide. Utilisez YYYY-MM-DD."
+      }
+    },
+    "voice_to_text_error": "Impossible de transcrire l'audio",
+    "voice_to_text_prompt": "Transcris exactement ce que dit cette personne. La langue principale est {lang_name}. Répondez UNIQUEMENT avec la transcription, rien d'autre."
+  },
   "alerts": {
     "ai_anomaly_detection": "كشف الحالات الشاذة بالذكاء الاصطناعي",
     "all_good": "كل شيء على ما يرام",
@@ -307,6 +352,9 @@
       "errorFillFields": "يرجى ملء جميع الحقول",
       "errorLogin": "خطأ في تسجيل الدخول"
     },
+    "logout_btn": "Se déconnecter",
+    "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
+    "logout_title": "Déconnexion",
     "register": {
       "title": "إنشاء حساب",
       "chooseProfile": "اختر ملفك الشخصي",
@@ -355,6 +403,25 @@
       "errorIncorrect": "رمز غير صحيح أو منتهي الصلاحية",
       "resendTip": "ميزة إعادة الإرسال ستتوفر قريباً"
     }
+  },
+  "batch_scan": {
+    "action_required": "Action requise",
+    "apply_action": "Appliquer l'action",
+    "auto_replenish": "Réapprovisionnement auto",
+    "auto_replenish_desc": "Générer des bons de commande pour les manquants",
+    "choose_action": "Veuillez choisir une action…",
+    "items_identified": "Articles identifiés",
+    "orders_generated": "{{count}} bons de commande générés.",
+    "partial_result": "Résultat partiel",
+    "processing_title": "Traitement du lot",
+    "quick_inventory": "Inventaire rapide",
+    "quick_inventory_desc": "Marquer ces articles comme présents en stock",
+    "rfid_associate": "Association RFID",
+    "rfid_associate_desc": "Associer ces codes à des tags RFID",
+    "rfid_bulk_info": "L'association RFID par lot permet d'associer rapidement vos tags.",
+    "select_action": "Sélectionner une action",
+    "title": "Scan Rapide (Lot)",
+    "unknown_codes": "{{count}} codes sont inconnus…"
   },
   "bulk_import": {
     "back": "رجوع",
@@ -423,6 +490,7 @@
     "confirm": "تأكيد",
     "count_warning": "تحذير عند الإدخال",
     "currency_default": "درهم",
+    "currency_short": "F",
     "days_ago": "قبل {{count}} أيام",
     "delete": "حذف",
     "description": "الوصف",
@@ -430,6 +498,7 @@
     "error": "خطأ",
     "filter": "تصفية",
     "generate": "إنشاء",
+    "generic_error": "Une erreur est survenue.",
     "info": "معلومات",
     "items_count": "{{count}} عنصر",
     "language_choice": "اختر اللغة",
@@ -641,6 +710,7 @@
     "entries": "المدخلات",
     "exits": "المخرجات",
     "expected": "المتوقع",
+    "expected_qty": "Attendu: {{qty}}",
     "expired": "منتهي الصلاحية!",
     "expiry_alerts": "تنبيهات انتهاء الصلاحية (30 يوم)",
     "generate_tasks": "إنشاء مهام جديدة",
@@ -664,12 +734,17 @@
     "profitability_analysis": "تحليل الربحية",
     "recent_alerts": "التنبيهات الأخيرة",
     "recent_sales": "المبيعات الأخيرة",
+    "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
+    "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "جرد دوري",
     "see_detail_product": "عرض التفاصيل حسب المنتج",
     "see_feature": "اكتشاف الميزة",
     "see_less": "عرض أقل",
     "see_more": "عرض المزيد",
     "see_more_count": "عرض {{count}} منتجات حرجة أخرى",
+    "settings_done": "Terminer",
+    "settings_subtitle": "Activez ou désactivez les éléments que vous souhaitez voir sur votre écran d'accueil.",
+    "settings_title": "Personnaliser le Dashboard",
     "smart_reminders": "تذكيرات ذكية",
     "smart_replenishment": "تموين ذكي",
     "statistics": "الإحصائيات",
@@ -690,7 +765,47 @@
     "today_sales": "مبيعات اليوم",
     "top_products_value": "أفضل المنتجات (حسب القيمة)",
     "total_value": "القيمة الإجمالية",
-    "units": "وحدات"
+    "units": "وحدات",
+    "widget_abc_analysis": "Analyse ABC",
+    "widget_category_chart": "Répartition par catégorie",
+    "widget_expiry_alerts": "Alertes péremption",
+    "widget_forecast": "Prévisions de ventes",
+    "widget_inventory_tasks": "Tâches inventaire",
+    "widget_kpi": "KPIs (CA, Ventes, etc.)",
+    "widget_profitability": "Rentabilité par catégorie",
+    "widget_recent_alerts": "Alertes récentes",
+    "widget_recent_sales": "Dernières ventes",
+    "widget_reorder": "Réapprovisionnement",
+    "widget_smart_reminders": "Rappels intelligents",
+    "widget_stock_chart": "Évolution valeur stock",
+    "widget_stock_status": "Statut des stocks"
+  },
+  "delivery": {
+    "ai_analysis": "Analyse IA des produits...",
+    "ai_reason": "IA : {{reason}}",
+    "associate_for": "Associer : {{name}}",
+    "confirm_reception": "Confirmer la réception",
+    "confirmed_msg": "Le stock a été mis à jour.",
+    "confirmed_title": "Livraison confirmée",
+    "create_new_product": "Créer un nouveau produit",
+    "error_confirm": "Impossible de confirmer la livraison",
+    "error_load_suggestions": "Impossible de charger les suggestions",
+    "no_product_found": "Aucun produit trouvé",
+    "products_to_match": "{{count}} produit(s) à associer",
+    "search_product": "Rechercher un produit...",
+    "stock_label": "Stock:"
+  },
+  "errors": {
+    "ai_generation_error": "Impossible de générer le contenu IA",
+    "expense_deleted": "Charge supprimée",
+    "expense_not_found": "Charge non trouvée",
+    "forbidden": "Accès refusé",
+    "gemini_api_missing": "Clé API Gemini non configurée",
+    "product_not_found": "Produit non trouvé",
+    "server_error": "Erreur interne du serveur",
+    "task_not_found": "Tâche non trouvée",
+    "unauthorized": "Accès non autorisé",
+    "user_not_found": "Utilisateur non trouvé"
   },
   "help": {
     "faq": {
@@ -1439,6 +1554,7 @@
     "ai_price_info": "اقتراح السعر متاح فقط للمنتجات الموجودة",
     "all": "الكل",
     "batch_number_label": "رقم الدفعة (اختياري)",
+    "batch_number_placeholder_hint": "Ex: LOT2024-001",
     "bulk_delete_msg": "هل تريد حذف {{count}} منتجاً مختاراً؟",
     "bulk_delete_title": "حذف جماعي",
     "camera": "الكاميرا",
@@ -1459,6 +1575,7 @@
     "confirm_inventory": "تأكيد الجرد",
     "create_error": "تعذر إنشاء/تعديل المنتج",
     "current_stock_label": "المخزون الحالي",
+    "date_format_placeholder": "AAAA-MM-JJ",
     "default_unit": "قطعة",
     "delete": "حذف",
     "delete_category_error": "تعذر حذف الفئة",
@@ -1466,12 +1583,14 @@
     "edit": "تعديل",
     "edit_category": "تعديل الفئة",
     "expiry_date_label": "تاريخ الانتهاء (YYYY-MM-DD)",
+    "expiry_date_placeholder_hint": "Ex: 2025-12-31",
     "export_history_error": "تعذر تصدير السجل",
     "export_products_error": "تعذر تصدير المنتجات",
     "field_description": "الوصف",
     "field_name": "الاسم",
     "field_name_placeholder": "اسم المنتج...",
     "field_sku": "الرمز / الكود",
+    "forecast_7d_unit": "{{count}} prédits (7j)",
     "gallery": "المعرض",
     "history": "السجل",
     "history_tab_price": "السعر",
@@ -1525,8 +1644,10 @@
     "remove_photo": "حذف الصورة",
     "remove_stock": "-مخزون",
     "report_section_stock": "حالة المخزون",
+    "rfid_hardware_info": "La lecture RFID nécessite un matériel compatible.",
     "rfid_info_msg": "قراءة RFID تتطلب جهازاً متوافقاً. يمكنك إدخال المعرف يدوياً.",
     "rfid_info_title": "RFID",
+    "rfid_reading_not_supported": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "search": "البحث عن منتج...",
     "search_placeholder": "ابحث عن منتج...",
     "see_less": "عرض أقل",
@@ -1560,6 +1681,29 @@
     "validate_out": "تأكيد الخروج",
     "variant_name_placeholder": "اسم النوع (مثال: XL، أحمر...)",
     "variants": "الأنواع"
+  },
+  "reminders": {
+    "birthdays_desc": "Prévenir X jours avant",
+    "birthdays_label": "Anniversaires clients",
+    "client_reactivation_desc": "Clients fidèles inactifs depuis X jours",
+    "client_reactivation_label": "Réactivation clients",
+    "debt_recovery_desc": "Dettes clients dépassant le seuil",
+    "debt_recovery_label": "Recouvrement de dettes",
+    "dormant_products_desc": "Produits sans vente depuis X jours",
+    "dormant_products_label": "Produits dormants",
+    "expense_spike_desc": "Alerte si +X% vs mois précédent",
+    "expense_spike_label": "Hausse des dépenses",
+    "inventory_check_desc": "Alerte si pas d'inventaire depuis X jours",
+    "inventory_check_label": "Vérification inventaire",
+    "late_deliveries_desc": "Critique après X jours de retard",
+    "late_deliveries_label": "Livraisons en retard",
+    "monthly_report_desc": "X derniers jours du mois",
+    "monthly_report_label": "Rapport mensuel",
+    "pending_invitations_desc": "En attente depuis X jours",
+    "pending_invitations_label": "Invitations en attente",
+    "replenishment_desc": "Produits sous le stock minimum",
+    "replenishment_label": "Réapprovisionnement",
+    "unit_days": "jours"
   },
   "settings": {
     "about": "حول",
@@ -1741,6 +1885,42 @@
     "revenue_this_month": "إيرادات هذا الشهر",
     "reviews": "التقييمات",
     "top_products": "أفضل المنتجات"
+  },
+  "supplier_settings": {
+    "address_label": "Adresse",
+    "address_ph": "Adresse complète",
+    "application": "Application",
+    "avg_delivery_label": "Délai moyen (jours)",
+    "categories_label": "Catégories (séparées par des virgules)",
+    "categories_ph": "Alimentaire, Cosmétique, Textile...",
+    "city_label": "Ville",
+    "city_ph": "Ex: Dakar, Abidjan...",
+    "commercial_profile": "Profil commercial",
+    "company_name_label": "Nom de l'entreprise *",
+    "company_name_ph": "Nom de l'entreprise",
+    "create_profile": "Créer mon profil",
+    "days": "jours",
+    "description_label": "Description",
+    "description_ph": "Décrivez votre activité",
+    "error_company_required": "Le nom de l'entreprise est requis",
+    "error_save": "Impossible de sauvegarder le profil",
+    "info_address": "Adresse",
+    "info_avg_delivery": "Délai moyen",
+    "info_categories": "Catégories",
+    "info_city": "Ville",
+    "info_company": "Entreprise",
+    "info_description": "Description",
+    "info_min_order": "Montant min commande",
+    "info_note": "Note",
+    "info_phone": "Téléphone",
+    "info_zones": "Zones de livraison",
+    "min_order_label": "Montant min commande",
+    "page_title": "Paramètres",
+    "phone_label": "Téléphone",
+    "reviews": "avis",
+    "role_supplier": "Fournisseur",
+    "zones_label": "Zones de livraison (séparées par des virgules)",
+    "zones_ph": "Dakar, Thiès, St-Louis..."
   },
   "suppliers": {
     "add_invoice_feature": "ميزة الرفع قريباً",
