--- a/frontend/locales/de.json
+++ b/frontend/locales/de.json
@@ -1,4 +1,8 @@
-{
+﻿{
+  "abc": {
+    "no_revenue": "Aucun revenu généré sur la période.",
+    "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
+  },
   "accounting": {
     "amount": "Betrag",
     "amount_placeholder": "0.00",
@@ -40,6 +44,7 @@
     "invalid_amount": "Ungültiger Betrag",
     "invoice_title": "RECHNUNG",
     "items_sold": "Verkaufte Artikel",
+    "last_days_label": "{{count}} derniers jours",
     "loss_details": "Details der Verluste",
     "loss_reasons": "{{count}} Verlustgrund(-gründe)",
     "losses": "Verluste / Schäden",
@@ -59,6 +64,14 @@
     "payment_methods": "Verkäufe nach Zahlungsmethode",
     "payment_mobile_money": "Mobile Money",
     "payment_transfer": "Überweisung",
+    "pdf_expenses_detail": "Détail des Charges",
+    "pdf_generation_error": "Erreur lors de la génération du rapport",
+    "pdf_gross_margin": "Marge brute",
+    "pdf_no_address": "Adresse non renseignée",
+    "pdf_no_expenses": "Aucune dépense sur cette période",
+    "pdf_top_products": "Top 10 Produits par Performance",
+    "pdf_total_expenses": "Total charges",
+    "pdf_total_revenue": "CA total",
     "period_label": "Zeitraum:",
     "product": "Produkt",
     "product_performance": "Leistung pro Produkt",
@@ -233,6 +246,38 @@
       "countryLabel": "Pays: {{country}}"
     }
   },
+  "ai": {
+    "daily_summary_prompt": "Tu es Stockman AI. Voici les activités de la journée : {activity}. Fais un résumé très court (3-4 phrases) et motivant pour le commerçant.",
+    "persona_name": "Assistant Stockman",
+    "replenishment_advice_prompt": "Tu es un expert en logistique. Voici les produits critiques : {products}. Donne des conseils de réapprovisionnement basés sur les ventes récentes.",
+    "summary_goal": "Ton but est d’aider l’utilisateur à naviguer dans l’application ET à analyser son activité.",
+    "summary_instruction_admin": "SI L’UTILISATEUR EST ADMIN, COMMENCE TA PREMIÈRE RÉPONSE PAR UN BREF RÉSUMÉ DE LA SANTÉ DU SYSTÈME SI DES ALERTES SONT PRÉSENTES.",
+    "summary_role_admin": "Tu es l’assistant personnel de l’ADMINISTRATEUR de Stockman. Tu as accès aux métriques globales.",
+    "summary_role_merchant": "Tu es l’assistant intelligent expert de l’application Stockman pour les commerçants.",
+    "summary_tone": "Adopte un ton pédagogique, professionnel et chaleureux. Tes réponses doivent être complètes et explicatives.",
+    "tools": {
+      "inventory_alerts": {
+        "empty": "Aucune alerte de stock critique.",
+        "format": "{name}: Stock={quantity} (Min={min_stock})"
+      },
+      "system_alerts": {
+        "empty": "Santé du système d’administration excellente. Aucune alerte critique.",
+        "critical_login": "CRITICAL: {count} échecs de connexion détectés en 24h. Risque de Brute-force.",
+        "support_backlog": "ALERTE: Backlog support élevé ({count} tickets ouverts)."
+      },
+      "product_info": {
+        "not_found": "Aucun produit trouvé pour '{name}'.",
+        "status_out": "En rupture",
+        "status_in": "En stock"
+      },
+      "forecast": {
+        "not_found": "Produit '{name}' non trouvé pour l’analyse.",
+        "invalid_date": "Format de date invalide. Utilisez YYYY-MM-DD."
+      }
+    },
+    "voice_to_text_error": "Impossible de transcrire l'audio",
+    "voice_to_text_prompt": "Transcris exactement ce que dit cette personne. La langue principale est {lang_name}. Répondez UNIQUEMENT avec la transcription, rien d'autre."
+  },
   "alerts": {
     "ai_anomaly_detection": "KI-Anomalieerkennung",
     "all_good": "Alles in Ordnung",
@@ -307,6 +352,9 @@
       "errorFillFields": "Bitte füllen Sie alle Felder aus",
       "errorLogin": "Anmeldefehler"
     },
+    "logout_btn": "Se déconnecter",
+    "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
+    "logout_title": "Déconnexion",
     "register": {
       "title": "Konto erstellen",
       "chooseProfile": "Wählen Sie Ihr Profil",
@@ -355,6 +403,25 @@
       "errorIncorrect": "Code falsch oder abgelaufen",
       "resendTip": "Funktion zum erneuten Senden bald verfügbar"
     }
+  },
+  "batch_scan": {
+    "action_required": "Action requise",
+    "apply_action": "Appliquer l'action",
+    "auto_replenish": "Réapprovisionnement auto",
+    "auto_replenish_desc": "Générer des bons de commande pour les manquants",
+    "choose_action": "Veuillez choisir une action…",
+    "items_identified": "Articles identifiés",
+    "orders_generated": "{{count}} bons de commande générés.",
+    "partial_result": "Résultat partiel",
+    "processing_title": "Traitement du lot",
+    "quick_inventory": "Inventaire rapide",
+    "quick_inventory_desc": "Marquer ces articles comme présents en stock",
+    "rfid_associate": "Association RFID",
+    "rfid_associate_desc": "Associer ces codes à des tags RFID",
+    "rfid_bulk_info": "L'association RFID par lot permet d'associer rapidement vos tags.",
+    "select_action": "Sélectionner une action",
+    "title": "Scan Rapide (Lot)",
+    "unknown_codes": "{{count}} codes sont inconnus…"
   },
   "bulk_import": {
     "back": "Zurück",
@@ -423,6 +490,7 @@
     "confirm": "Bestätigen",
     "count_warning": "Achtung bei der Eingabe",
     "currency_default": "FCFA",
+    "currency_short": "F",
     "days_ago": "vor {{count}} Tagen",
     "delete": "Löschen",
     "description": "Beschreibung",
@@ -430,6 +498,7 @@
     "error": "Fehler",
     "filter": "Filtern",
     "generate": "Generieren",
+    "generic_error": "Une erreur est survenue.",
     "info": "Info",
     "items_count": "{{count}} Artikel",
     "language_choice": "Sprache wählen",
@@ -641,6 +710,7 @@
     "entries": "Eingänge",
     "exits": "Ausgänge",
     "expected": "Erwartet",
+    "expected_qty": "Attendu: {{qty}}",
     "expired": "Abgelaufen!",
     "expiry_alerts": "Verfallsalarme (30T)",
     "generate_tasks": "Neue Aufgaben generieren",
@@ -664,12 +734,17 @@
     "profitability_analysis": "Rentabilitätsanalyse",
     "recent_alerts": "Aktuelle Alarme",
     "recent_sales": "Letzte Verkäufe",
+    "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
+    "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Rotierende Inventur",
     "see_detail_product": "Details pro Produkt anzeigen",
     "see_feature": "Diese Funktion ansehen",
     "see_less": "Weniger anzeigen",
     "see_more": "Mehr anzeigen",
     "see_more_count": "Die anderen {{count}} kritischen Produkte anzeigen",
+    "settings_done": "Terminer",
+    "settings_subtitle": "Activez ou désactivez les éléments que vous souhaitez voir sur votre écran d'accueil.",
+    "settings_title": "Personnaliser le Dashboard",
     "smart_reminders": "Intelligente Erinnerungen",
     "smart_replenishment": "Intelligente Nachbestellung",
     "statistics": "Statistiken",
@@ -690,7 +765,47 @@
     "today_sales": "Tagesverkäufe",
     "top_products_value": "Top-Produkte (Wert)",
     "total_value": "Gesamtwert",
-    "units": "Einheiten"
+    "units": "Einheiten",
+    "widget_abc_analysis": "Analyse ABC",
+    "widget_category_chart": "Répartition par catégorie",
+    "widget_expiry_alerts": "Alertes péremption",
+    "widget_forecast": "Prévisions de ventes",
+    "widget_inventory_tasks": "Tâches inventaire",
+    "widget_kpi": "KPIs (CA, Ventes, etc.)",
+    "widget_profitability": "Rentabilité par catégorie",
+    "widget_recent_alerts": "Alertes récentes",
+    "widget_recent_sales": "Dernières ventes",
+    "widget_reorder": "Réapprovisionnement",
+    "widget_smart_reminders": "Rappels intelligents",
+    "widget_stock_chart": "Évolution valeur stock",
+    "widget_stock_status": "Statut des stocks"
+  },
+  "delivery": {
+    "ai_analysis": "Analyse IA des produits...",
+    "ai_reason": "IA : {{reason}}",
+    "associate_for": "Associer : {{name}}",
+    "confirm_reception": "Confirmer la réception",
+    "confirmed_msg": "Le stock a été mis à jour.",
+    "confirmed_title": "Livraison confirmée",
+    "create_new_product": "Créer un nouveau produit",
+    "error_confirm": "Impossible de confirmer la livraison",
+    "error_load_suggestions": "Impossible de charger les suggestions",
+    "no_product_found": "Aucun produit trouvé",
+    "products_to_match": "{{count}} produit(s) à associer",
+    "search_product": "Rechercher un produit...",
+    "stock_label": "Stock:"
+  },
+  "errors": {
+    "ai_generation_error": "Impossible de générer le contenu IA",
+    "expense_deleted": "Charge supprimée",
+    "expense_not_found": "Charge non trouvée",
+    "forbidden": "Accès refusé",
+    "gemini_api_missing": "Clé API Gemini non configurée",
+    "product_not_found": "Produit non trouvé",
+    "server_error": "Erreur interne du serveur",
+    "task_not_found": "Tâche non trouvée",
+    "unauthorized": "Accès non autorisé",
+    "user_not_found": "Utilisateur non trouvé"
   },
   "help": {
     "faq": {
@@ -1439,6 +1554,7 @@
     "ai_price_info": "Preisvorschläge sind nur für bestehende Produkte verfügbar",
     "all": "Alle",
     "batch_number_label": "Chargennummer (optional)",
+    "batch_number_placeholder_hint": "Ex: LOT2024-001",
     "bulk_delete_msg": "Möchten Sie die {{count}} ausgewählten Produkte löschen?",
     "bulk_delete_title": "Sammellöschung",
     "camera": "Kamera",
@@ -1459,6 +1575,7 @@
     "confirm_inventory": "Inventur bestätigen",
     "create_error": "Produkt konnte nicht erstellt/geändert werden",
     "current_stock_label": "Aktueller Bestand",
+    "date_format_placeholder": "AAAA-MM-JJ",
     "default_unit": "Stück",
     "delete": "Lösch.",
     "delete_category_error": "Kategorie konnte nicht gelöscht werden",
@@ -1466,12 +1583,14 @@
     "edit": "Bearb.",
     "edit_category": "Kategorie bearbeiten",
     "expiry_date_label": "Verfallsdatum (JJJJ-MM-TT)",
+    "expiry_date_placeholder_hint": "Ex: 2025-12-31",
     "export_history_error": "Verlauf konnte nicht exportiert werden",
     "export_products_error": "Produkte konnten nicht exportiert werden",
     "field_description": "Beschreibung",
     "field_name": "Name",
     "field_name_placeholder": "Produktname...",
     "field_sku": "SKU / Code",
+    "forecast_7d_unit": "{{count}} prédits (7j)",
     "gallery": "Galerie",
     "history": "Verlauf",
     "history_tab_price": "Preis",
@@ -1525,8 +1644,10 @@
     "remove_photo": "Foto löschen",
     "remove_stock": "-Bestand",
     "report_section_stock": "Bestandsstatus",
+    "rfid_hardware_info": "La lecture RFID nécessite un matériel compatible.",
     "rfid_info_msg": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "rfid_info_title": "RFID",
+    "rfid_reading_not_supported": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "search": "Produkt suchen...",
     "search_placeholder": "Produkt suchen...",
     "see_less": "Weniger anzeigen",
@@ -1559,6 +1680,29 @@
     "validate_out": "Ausgang bestätigen",
     "variant_name_placeholder": "Name der Variante (z.B. XL, Rot...)",
     "variants": "Varianten"
+  },
+  "reminders": {
+    "birthdays_desc": "Prévenir X jours avant",
+    "birthdays_label": "Anniversaires clients",
+    "client_reactivation_desc": "Clients fidèles inactifs depuis X jours",
+    "client_reactivation_label": "Réactivation clients",
+    "debt_recovery_desc": "Dettes clients dépassant le seuil",
+    "debt_recovery_label": "Recouvrement de dettes",
+    "dormant_products_desc": "Produits sans vente depuis X jours",
+    "dormant_products_label": "Produits dormants",
+    "expense_spike_desc": "Alerte si +X% vs mois précédent",
+    "expense_spike_label": "Hausse des dépenses",
+    "inventory_check_desc": "Alerte si pas d'inventaire depuis X jours",
+    "inventory_check_label": "Vérification inventaire",
+    "late_deliveries_desc": "Critique après X jours de retard",
+    "late_deliveries_label": "Livraisons en retard",
+    "monthly_report_desc": "X derniers jours du mois",
+    "monthly_report_label": "Rapport mensuel",
+    "pending_invitations_desc": "En attente depuis X jours",
+    "pending_invitations_label": "Invitations en attente",
+    "replenishment_desc": "Produits sous le stock minimum",
+    "replenishment_label": "Réapprovisionnement",
+    "unit_days": "jours"
   },
   "settings": {
     "about": "Über",
@@ -1740,6 +1884,42 @@
     "revenue_this_month": "Umsatz diesen Monat",
     "reviews": "Bewertungen",
     "top_products": "Top-Produkte"
+  },
+  "supplier_settings": {
+    "address_label": "Adresse",
+    "address_ph": "Adresse complète",
+    "application": "Application",
+    "avg_delivery_label": "Délai moyen (jours)",
+    "categories_label": "Catégories (séparées par des virgules)",
+    "categories_ph": "Alimentaire, Cosmétique, Textile...",
+    "city_label": "Ville",
+    "city_ph": "Ex: Dakar, Abidjan...",
+    "commercial_profile": "Profil commercial",
+    "company_name_label": "Nom de l'entreprise *",
+    "company_name_ph": "Nom de l'entreprise",
+    "create_profile": "Créer mon profil",
+    "days": "jours",
+    "description_label": "Description",
+    "description_ph": "Décrivez votre activité",
+    "error_company_required": "Le nom de l'entreprise est requis",
+    "error_save": "Impossible de sauvegarder le profil",
+    "info_address": "Adresse",
+    "info_avg_delivery": "Délai moyen",
+    "info_categories": "Catégories",
+    "info_city": "Ville",
+    "info_company": "Entreprise",
+    "info_description": "Description",
+    "info_min_order": "Montant min commande",
+    "info_note": "Note",
+    "info_phone": "Téléphone",
+    "info_zones": "Zones de livraison",
+    "min_order_label": "Montant min commande",
+    "page_title": "Paramètres",
+    "phone_label": "Téléphone",
+    "reviews": "avis",
+    "role_supplier": "Fournisseur",
+    "zones_label": "Zones de livraison (séparées par des virgules)",
+    "zones_ph": "Dakar, Thiès, St-Louis..."
   },
   "suppliers": {
     "add_invoice_feature": "Upload-Funktion kommt bald",
