--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -1,4 +1,8 @@
-{
+﻿{
+  "abc": {
+    "no_revenue": "Aucun revenu généré sur la période.",
+    "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
+  },
   "accounting": {
     "amount": "Montant",
     "amount_placeholder": "0.00",
@@ -40,6 +44,7 @@
     "invalid_amount": "Montant invalide",
     "invoice_title": "FACTURE",
     "items_sold": "Articles vendus",
+    "last_days_label": "{{count}} derniers jours",
     "loss_details": "Détails des pertes",
     "loss_reasons": "{{count}} motifs de perte",
     "losses": "Pertes & Casses",
@@ -59,8 +64,15 @@
     "payment_methods": "Modes de Paiement",
     "payment_mobile_money": "Mobile Money",
     "payment_transfer": "Virement",
+    "pdf_expenses_detail": "Détail des Charges",
+    "pdf_generation_error": "Erreur lors de la génération du rapport",
+    "pdf_gross_margin": "Marge brute",
+    "pdf_no_address": "Adresse non renseignée",
+    "pdf_no_expenses": "Aucune dépense sur cette période",
+    "pdf_top_products": "Top 10 Produits par Performance",
+    "pdf_total_expenses": "Total charges",
+    "pdf_total_revenue": "CA total",
     "period_label": "Période :",
-    "last_days_label": "{{count}} derniers jours",
     "product": "Produit",
     "product_performance": "Performance par Produit",
     "purchases_count": "{{count}} réappro.",
@@ -70,14 +82,6 @@
     "report_gen_error": "Erreur lors de la génération du rapport",
     "report_generation_error": "Erreur lors de la génération du rapport",
     "report_title": "RAPPORT D'ACTIVITÉ",
-    "pdf_total_revenue": "CA total",
-    "pdf_gross_margin": "Marge brute",
-    "pdf_total_expenses": "Total charges",
-    "pdf_top_products": "Top 10 Produits par Performance",
-    "pdf_expenses_detail": "Détail des Charges",
-    "pdf_no_expenses": "Aucune dépense sur cette période",
-    "pdf_no_address": "Adresse non renseignée",
-    "pdf_generation_error": "Erreur lors de la génération du rapport",
     "revenue": "Chiffre d'Affaires",
     "revenue_breakdown": "Répartition du CA",
     "revenue_info": "Chiffre d'affaires total sur la période sélectionnée.",
@@ -242,6 +246,38 @@
       "countryLabel": "Pays: {{country}}"
     }
   },
+  "ai": {
+    "daily_summary_prompt": "Tu es Stockman AI. Voici les activités de la journée : {activity}. Fais un résumé très court (3-4 phrases) et motivant pour le commerçant.",
+    "persona_name": "Assistant Stockman",
+    "replenishment_advice_prompt": "Tu es un expert en logistique. Voici les produits critiques : {products}. Donne des conseils de réapprovisionnement basés sur les ventes récentes.",
+    "summary_goal": "Ton but est d’aider l’utilisateur à naviguer dans l’application ET à analyser son activité.",
+    "summary_instruction_admin": "SI L’UTILISATEUR EST ADMIN, COMMENCE TA PREMIÈRE RÉPONSE PAR UN BREF RÉSUMÉ DE LA SANTÉ DU SYSTÈME SI DES ALERTES SONT PRÉSENTES.",
+    "summary_role_admin": "Tu es l’assistant personnel de l’ADMINISTRATEUR de Stockman. Tu as accès aux métriques globales.",
+    "summary_role_merchant": "Tu es l’assistant intelligent expert de l’application Stockman pour les commerçants.",
+    "summary_tone": "Adopte un ton pédagogique, professionnel et chaleureux. Tes réponses doivent être complètes et explicatives.",
+    "tools": {
+      "inventory_alerts": {
+        "empty": "Aucune alerte de stock critique.",
+        "format": "{name}: Stock={quantity} (Min={min_stock})"
+      },
+      "system_alerts": {
+        "empty": "Santé du système d’administration excellente. Aucune alerte critique.",
+        "critical_login": "CRITICAL: {count} échecs de connexion détectés en 24h. Risque de Brute-force.",
+        "support_backlog": "ALERTE: Backlog support élevé ({count} tickets ouverts)."
+      },
+      "product_info": {
+        "not_found": "Aucun produit trouvé pour '{name}'.",
+        "status_out": "En rupture",
+        "status_in": "En stock"
+      },
+      "forecast": {
+        "not_found": "Produit '{name}' non trouvé pour l’analyse.",
+        "invalid_date": "Format de date invalide. Utilisez YYYY-MM-DD."
+      }
+    },
+    "voice_to_text_error": "Impossible de transcrire l'audio",
+    "voice_to_text_prompt": "Transcris exactement ce que dit cette personne. La langue principale est {lang_name}. Répondez UNIQUEMENT avec la transcription, rien d'autre."
+  },
   "alerts": {
     "analyze_desc": "Analyser ventes, stocks et marges",
     "analyzing": "Analyse en cours...",
@@ -304,6 +340,9 @@
       "errorFillFields": "Veuillez remplir tous les champs",
       "errorLogin": "Erreur de connexion"
     },
+    "logout_btn": "Se déconnecter",
+    "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
+    "logout_title": "Déconnexion",
     "register": {
       "title": "Créer un compte",
       "chooseProfile": "Choisissez votre profil",
@@ -351,29 +390,26 @@
       "errorCode": "Veuillez entrer le code à 6 chiffres",
       "errorIncorrect": "Code incorrect ou expiré",
       "resendTip": "Fonctionnalité de renvoi bientôt disponible"
-    },
-    "logout_title": "Déconnexion",
-    "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
-    "logout_btn": "Se déconnecter"
+    }
   },
   "batch_scan": {
     "action_required": "Action requise",
-    "choose_action": "Veuillez choisir une action…",
-    "orders_generated": "{{count}} bons de commande générés.",
-    "unknown_codes": "{{count}} codes sont inconnus…",
-    "partial_result": "Résultat partiel",
-    "rfid_bulk_info": "L'association RFID par lot permet d'associer rapidement vos tags.",
-    "title": "Scan Rapide (Lot)",
-    "processing_title": "Traitement du lot",
-    "items_identified": "Articles identifiés",
-    "select_action": "Sélectionner une action",
-    "quick_inventory": "Inventaire rapide",
-    "quick_inventory_desc": "Marquer ces articles comme présents en stock",
+    "apply_action": "Appliquer l'action",
     "auto_replenish": "Réapprovisionnement auto",
     "auto_replenish_desc": "Générer des bons de commande pour les manquants",
+    "choose_action": "Veuillez choisir une action…",
+    "items_identified": "Articles identifiés",
+    "orders_generated": "{{count}} bons de commande générés.",
+    "partial_result": "Résultat partiel",
+    "processing_title": "Traitement du lot",
+    "quick_inventory": "Inventaire rapide",
+    "quick_inventory_desc": "Marquer ces articles comme présents en stock",
     "rfid_associate": "Association RFID",
     "rfid_associate_desc": "Associer ces codes à des tags RFID",
-    "apply_action": "Appliquer l'action"
+    "rfid_bulk_info": "L'association RFID par lot permet d'associer rapidement vos tags.",
+    "select_action": "Sélectionner une action",
+    "title": "Scan Rapide (Lot)",
+    "unknown_codes": "{{count}} codes sont inconnus…"
   },
   "bulk_import": {
     "back": "Retour",
@@ -445,23 +481,12 @@
     "currency_short": "F",
     "days_ago": "Il y a {{count}} jours",
     "delete": "Supprimer",
-    "periods": {
-      "7d": "7j",
-      "30d": "30j",
-      "90d": "90j",
-      "1y": "1 an",
-      "custom": "Personnalisé",
-      "from": "Du",
-      "to": "au",
-      "apply": "Appliquer",
-      "last_days": "Derniers {{count}} jours"
-    },
     "description": "Description",
     "edit": "Modifier",
     "error": "Erreur",
-    "generic_error": "Une erreur est survenue.",
     "filter": "Filtrer",
     "generate": "Générer",
+    "generic_error": "Une erreur est survenue.",
     "info": "Info",
     "items_count": "{{count}} article(s)",
     "language_choice": "Choisir la langue",
@@ -474,6 +499,17 @@
     "none": "Aucun",
     "offline": "Hors ligne",
     "or": "ou",
+    "periods": {
+      "7d": "7j",
+      "30d": "30j",
+      "90d": "90j",
+      "1y": "1 an",
+      "custom": "Personnalisé",
+      "from": "Du",
+      "to": "au",
+      "apply": "Appliquer",
+      "last_days": "Derniers {{count}} jours"
+    },
     "price": "Prix",
     "save": "Enregistrer",
     "search": "Rechercher",
@@ -651,6 +687,7 @@
     "entries": "Entrées",
     "exits": "Sorties",
     "expected": "Attendu",
+    "expected_qty": "Attendu: {{qty}}",
     "expired": "Périmé !",
     "expiry_alerts": "Alertes Péremption (30j)",
     "generate_tasks": "Générer de nouvelles tâches",
@@ -673,11 +710,16 @@
     "profitability_analysis": "Analyse de Rentabilité",
     "recent_alerts": "Alertes récentes",
     "recent_sales": "Ventes Récentes",
+    "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
+    "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Inventaire Tournant",
     "see_detail_product": "Voir le détail par produit",
     "see_less": "Voir moins",
     "see_more": "Voir plus",
     "see_more_count": "Voir les {{count}} autres produits critiques",
+    "settings_done": "Terminer",
+    "settings_subtitle": "Activez ou désactivez les éléments que vous souhaitez voir sur votre écran d'accueil.",
+    "settings_title": "Personnaliser le Dashboard",
     "smart_reminders": "Rappels Intelligents",
     "smart_replenishment": "Réapprovisionnement Intelligent",
     "statistics": "Statistiques",
@@ -698,22 +740,47 @@
     "today_sales": "Ventes jour",
     "top_products_value": "Top produits (valeur)",
     "total_value": "Valeur totale",
-    "units": "unités"
+    "units": "unités",
+    "widget_abc_analysis": "Analyse ABC",
+    "widget_category_chart": "Répartition par catégorie",
+    "widget_expiry_alerts": "Alertes péremption",
+    "widget_forecast": "Prévisions de ventes",
+    "widget_inventory_tasks": "Tâches inventaire",
+    "widget_kpi": "KPIs (CA, Ventes, etc.)",
+    "widget_profitability": "Rentabilité par catégorie",
+    "widget_recent_alerts": "Alertes récentes",
+    "widget_recent_sales": "Dernières ventes",
+    "widget_reorder": "Réapprovisionnement",
+    "widget_smart_reminders": "Rappels intelligents",
+    "widget_stock_chart": "Évolution valeur stock",
+    "widget_stock_status": "Statut des stocks"
   },
   "delivery": {
-    "error_load_suggestions": "Impossible de charger les suggestions",
-    "confirmed_title": "Livraison confirmée",
-    "confirmed_msg": "Le stock a été mis à jour.",
-    "error_confirm": "Impossible de confirmer la livraison",
-    "confirm_reception": "Confirmer la réception",
     "ai_analysis": "Analyse IA des produits...",
-    "products_to_match": "{{count}} produit(s) à associer",
     "ai_reason": "IA : {{reason}}",
-    "create_new_product": "Créer un nouveau produit",
     "associate_for": "Associer : {{name}}",
-    "search_product": "Rechercher un produit...",
+    "confirm_reception": "Confirmer la réception",
+    "confirmed_msg": "Le stock a été mis à jour.",
+    "confirmed_title": "Livraison confirmée",
+    "create_new_product": "Créer un nouveau produit",
+    "error_confirm": "Impossible de confirmer la livraison",
+    "error_load_suggestions": "Impossible de charger les suggestions",
     "no_product_found": "Aucun produit trouvé",
+    "products_to_match": "{{count}} produit(s) à associer",
+    "search_product": "Rechercher un produit...",
     "stock_label": "Stock:"
+  },
+  "errors": {
+    "ai_generation_error": "Impossible de générer le contenu IA",
+    "expense_deleted": "Charge supprimée",
+    "expense_not_found": "Charge non trouvée",
+    "forbidden": "Accès refusé",
+    "gemini_api_missing": "Clé API Gemini non configurée",
+    "product_not_found": "Produit non trouvé",
+    "server_error": "Erreur interne du serveur",
+    "task_not_found": "Tâche non trouvée",
+    "unauthorized": "Accès non autorisé",
+    "user_not_found": "Utilisateur non trouvé"
   },
   "help": {
     "faq": {
@@ -1432,6 +1499,7 @@
     "ai_price_info": "La suggestion de prix est disponible uniquement pour les produits existants",
     "all": "Tout",
     "batch_number_label": "Numéro de Lot (Optionnel)",
+    "batch_number_placeholder_hint": "Ex: LOT2024-001",
     "bulk_delete_msg": "Voulez-vous supprimer les {{count}} produits sélectionnés ?",
     "bulk_delete_title": "Suppression groupée",
     "camera": "Caméra",
@@ -1452,6 +1520,7 @@
     "confirm_inventory": "Confirmer l'inventaire",
     "create_error": "Impossible de créer/modifier le produit",
     "current_stock_label": "Stock actuel",
+    "date_format_placeholder": "AAAA-MM-JJ",
     "default_unit": "Pièce",
     "delete": "Suppr.",
     "delete_category_error": "Impossible de supprimer la catégorie",
@@ -1459,16 +1528,14 @@
     "edit": "Éditer",
     "edit_category": "Modifier la catégorie",
     "expiry_date_label": "Date de Péremption (AAAA-MM-JJ)",
+    "expiry_date_placeholder_hint": "Ex: 2025-12-31",
     "export_history_error": "Impossible d'exporter l'historique",
     "export_products_error": "Impossible d'exporter les produits",
-    "batch_number_placeholder_hint": "Ex: LOT2024-001",
-    "expiry_date_placeholder_hint": "Ex: 2025-12-31",
-    "forecast_7d_unit": "{{count}} prédits (7j)",
-    "rfid_reading_not_supported": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "field_description": "Description",
     "field_name": "Nom",
     "field_name_placeholder": "Nom du produit...",
     "field_sku": "SKU / Code",
+    "forecast_7d_unit": "{{count}} prédits (7j)",
     "gallery": "Galerie",
     "history": "Hist.",
     "history_tab_price": "Prix",
@@ -1514,8 +1581,6 @@
     "print_label_rfid": "Imprimer Étiquette RFID",
     "product_count": "{{count}} produit(s)",
     "products_total": "produits au total",
-    "rfid_hardware_info": "La lecture RFID nécessite un matériel compatible.",
-    "date_format_placeholder": "AAAA-MM-JJ",
     "purchase": "Achat",
     "purchase_price_short": "Achat",
     "qty": "Qté",
@@ -1524,8 +1589,10 @@
     "remove_photo": "Supprimer la photo",
     "remove_stock": "-Stock",
     "report_section_stock": "État du stock",
+    "rfid_hardware_info": "La lecture RFID nécessite un matériel compatible.",
     "rfid_info_msg": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "rfid_info_title": "RFID",
+    "rfid_reading_not_supported": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "search_placeholder": "Rechercher un produit...",
     "see_less": "Voir moins",
     "see_more": "Voir plus",
@@ -1557,6 +1624,29 @@
     "validate_out": "Valider la sortie",
     "variant_name_placeholder": "Nom de la variante (ex: XL, Rouge...)",
     "variants": "Variantes"
+  },
+  "reminders": {
+    "birthdays_desc": "Prévenir X jours avant",
+    "birthdays_label": "Anniversaires clients",
+    "client_reactivation_desc": "Clients fidèles inactifs depuis X jours",
+    "client_reactivation_label": "Réactivation clients",
+    "debt_recovery_desc": "Dettes clients dépassant le seuil",
+    "debt_recovery_label": "Recouvrement de dettes",
+    "dormant_products_desc": "Produits sans vente depuis X jours",
+    "dormant_products_label": "Produits dormants",
+    "expense_spike_desc": "Alerte si +X% vs mois précédent",
+    "expense_spike_label": "Hausse des dépenses",
+    "inventory_check_desc": "Alerte si pas d'inventaire depuis X jours",
+    "inventory_check_label": "Vérification inventaire",
+    "late_deliveries_desc": "Critique après X jours de retard",
+    "late_deliveries_label": "Livraisons en retard",
+    "monthly_report_desc": "X derniers jours du mois",
+    "monthly_report_label": "Rapport mensuel",
+    "pending_invitations_desc": "En attente depuis X jours",
+    "pending_invitations_label": "Invitations en attente",
+    "replenishment_desc": "Produits sous le stock minimum",
+    "replenishment_label": "Réapprovisionnement",
+    "unit_days": "jours"
   },
   "settings": {
     "about": "À propos",
@@ -1738,6 +1828,42 @@
     "reviews": "Avis",
     "top_products": "Top Produits"
   },
+  "supplier_settings": {
+    "address_label": "Adresse",
+    "address_ph": "Adresse complète",
+    "application": "Application",
+    "avg_delivery_label": "Délai moyen (jours)",
+    "categories_label": "Catégories (séparées par des virgules)",
+    "categories_ph": "Alimentaire, Cosmétique, Textile...",
+    "city_label": "Ville",
+    "city_ph": "Ex: Dakar, Abidjan...",
+    "commercial_profile": "Profil commercial",
+    "company_name_label": "Nom de l'entreprise *",
+    "company_name_ph": "Nom de l'entreprise",
+    "create_profile": "Créer mon profil",
+    "days": "jours",
+    "description_label": "Description",
+    "description_ph": "Décrivez votre activité",
+    "error_company_required": "Le nom de l'entreprise est requis",
+    "error_save": "Impossible de sauvegarder le profil",
+    "info_address": "Adresse",
+    "info_avg_delivery": "Délai moyen",
+    "info_categories": "Catégories",
+    "info_city": "Ville",
+    "info_company": "Entreprise",
+    "info_description": "Description",
+    "info_min_order": "Montant min commande",
+    "info_note": "Note",
+    "info_phone": "Téléphone",
+    "info_zones": "Zones de livraison",
+    "min_order_label": "Montant min commande",
+    "page_title": "Paramètres",
+    "phone_label": "Téléphone",
+    "reviews": "avis",
+    "role_supplier": "Fournisseur",
+    "zones_label": "Zones de livraison (séparées par des virgules)",
+    "zones_ph": "Dakar, Thiès, St-Louis..."
+  },
   "suppliers": {
     "add_invoice_feature": "Fonctionnalité d'upload bientôt disponible",
     "add_note": "Ajouter une note",
@@ -1883,42 +2009,6 @@
     "whatsapp_not_installed": "WhatsApp n'est pas installé sur cet appareil",
     "with_email": "Avec email",
     "with_phone": "Avec téléphone"
-  },
-  "supplier_settings": {
-    "error_company_required": "Le nom de l'entreprise est requis",
-    "error_save": "Impossible de sauvegarder le profil",
-    "page_title": "Paramètres",
-    "role_supplier": "Fournisseur",
-    "commercial_profile": "Profil commercial",
-    "application": "Application",
-    "company_name_label": "Nom de l'entreprise *",
-    "description_label": "Description",
-    "phone_label": "Téléphone",
-    "address_label": "Adresse",
-    "city_label": "Ville",
-    "categories_label": "Catégories (séparées par des virgules)",
-    "zones_label": "Zones de livraison (séparées par des virgules)",
-    "min_order_label": "Montant min commande",
-    "avg_delivery_label": "Délai moyen (jours)",
-    "company_name_ph": "Nom de l'entreprise",
-    "description_ph": "Décrivez votre activité",
-    "address_ph": "Adresse complète",
-    "city_ph": "Ex: Dakar, Abidjan...",
-    "categories_ph": "Alimentaire, Cosmétique, Textile...",
-    "zones_ph": "Dakar, Thiès, St-Louis...",
-    "create_profile": "Créer mon profil",
-    "info_company": "Entreprise",
-    "info_description": "Description",
-    "info_phone": "Téléphone",
-    "info_address": "Adresse",
-    "info_city": "Ville",
-    "info_categories": "Catégories",
-    "info_zones": "Zones de livraison",
-    "info_min_order": "Montant min commande",
-    "info_avg_delivery": "Délai moyen",
-    "info_note": "Note",
-    "days": "jours",
-    "reviews": "avis"
   },
   "tabs": {
     "accounting": "Compta",
