--- a/frontend/locales/it.json
+++ b/frontend/locales/it.json
@@ -1,4 +1,8 @@
-{
+﻿{
+  "abc": {
+    "no_revenue": "Aucun revenu généré sur la période.",
+    "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
+  },
   "accounting": {
     "amount": "Importo",
     "amount_placeholder": "0.00",
@@ -40,6 +44,7 @@
     "invalid_amount": "Importo non valido",
     "invoice_title": "FATTURA",
     "items_sold": "Articoli venduti",
+    "last_days_label": "{{count}} derniers jours",
     "loss_details": "Dettagli delle perdite",
     "loss_reasons": "{{count}} motivo/i di perdita",
     "losses": "Perdite / Danni",
@@ -59,6 +64,14 @@
     "payment_methods": "Vendite per metodo di pagamento",
     "payment_mobile_money": "Mobile Money",
     "payment_transfer": "Bonifico",
+    "pdf_expenses_detail": "Détail des Charges",
+    "pdf_generation_error": "Erreur lors de la génération du rapport",
+    "pdf_gross_margin": "Marge brute",
+    "pdf_no_address": "Adresse non renseignée",
+    "pdf_no_expenses": "Aucune dépense sur cette période",
+    "pdf_top_products": "Top 10 Produits par Performance",
+    "pdf_total_expenses": "Total charges",
+    "pdf_total_revenue": "CA total",
     "period_label": "Periodo:",
     "product": "Prodotto",
     "product_performance": "Performance per Prodotto",
@@ -233,6 +246,38 @@
       "countryLabel": "Paese: {{country}}"
     }
   },
+  "ai": {
+    "daily_summary_prompt": "Tu es Stockman AI. Voici les activités de la journée : {activity}. Fais un résumé très court (3-4 phrases) et motivant pour le commerçant.",
+    "persona_name": "Assistant Stockman",
+    "replenishment_advice_prompt": "Tu es un expert en logistique. Voici les produits critiques : {products}. Donne des conseils de réapprovisionnement basés sur les ventes récentes.",
+    "summary_goal": "Ton but est d’aider l’utilisateur à naviguer dans l’application ET à analyser son activité.",
+    "summary_instruction_admin": "SI L’UTILISATEUR EST ADMIN, COMMENCE TA PREMIÈRE RÉPONSE PAR UN BREF RÉSUMÉ DE LA SANTÉ DU SYSTÈME SI DES ALERTES SONT PRÉSENTES.",
+    "summary_role_admin": "Tu es l’assistant personnel de l’ADMINISTRATEUR de Stockman. Tu as accès aux métriques globales.",
+    "summary_role_merchant": "Tu es l’assistant intelligent expert de l’application Stockman pour les commerçants.",
+    "summary_tone": "Adopte un ton pédagogique, professionnel et chaleureux. Tes réponses doivent être complètes et explicatives.",
+    "tools": {
+      "inventory_alerts": {
+        "empty": "Aucune alerte de stock critique.",
+        "format": "{name}: Stock={quantity} (Min={min_stock})"
+      },
+      "system_alerts": {
+        "empty": "Santé du système d’administration excellente. Aucune alerte critique.",
+        "critical_login": "CRITICAL: {count} échecs de connexion détectés en 24h. Risque de Brute-force.",
+        "support_backlog": "ALERTE: Backlog support élevé ({count} tickets ouverts)."
+      },
+      "product_info": {
+        "not_found": "Aucun produit trouvé pour '{name}'.",
+        "status_out": "En rupture",
+        "status_in": "En stock"
+      },
+      "forecast": {
+        "not_found": "Produit '{name}' non trouvé pour l’analyse.",
+        "invalid_date": "Format de date invalide. Utilisez YYYY-MM-DD."
+      }
+    },
+    "voice_to_text_error": "Impossible de transcrire l'audio",
+    "voice_to_text_prompt": "Transcris exactement ce que dit cette personne. La langue principale est {lang_name}. Répondez UNIQUEMENT avec la transcription, rien d'autre."
+  },
   "alerts": {
     "ai_anomaly_detection": "Rilevamento anomalie IA",
     "all_good": "Tutto in ordine",
@@ -294,6 +339,9 @@
       "errorFillFields": "Si prega di compilare tutti i campi",
       "errorLogin": "Errore di connessione"
     },
+    "logout_btn": "Se déconnecter",
+    "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
+    "logout_title": "Déconnexion",
     "register": {
       "title": "Crea un account",
       "chooseProfile": "Scegli il tuo profilo",
@@ -342,6 +390,25 @@
       "errorIncorrect": "Codice errato o scaduto",
       "resendTip": "Funzionalità di reinvio presto disponibile"
     }
+  },
+  "batch_scan": {
+    "action_required": "Action requise",
+    "apply_action": "Appliquer l'action",
+    "auto_replenish": "Réapprovisionnement auto",
+    "auto_replenish_desc": "Générer des bons de commande pour les manquants",
+    "choose_action": "Veuillez choisir une action…",
+    "items_identified": "Articles identifiés",
+    "orders_generated": "{{count}} bons de commande générés.",
+    "partial_result": "Résultat partiel",
+    "processing_title": "Traitement du lot",
+    "quick_inventory": "Inventaire rapide",
+    "quick_inventory_desc": "Marquer ces articles comme présents en stock",
+    "rfid_associate": "Association RFID",
+    "rfid_associate_desc": "Associer ces codes à des tags RFID",
+    "rfid_bulk_info": "L'association RFID par lot permet d'associer rapidement vos tags.",
+    "select_action": "Sélectionner une action",
+    "title": "Scan Rapide (Lot)",
+    "unknown_codes": "{{count}} codes sont inconnus…"
   },
   "bulk_import": {
     "back": "Indietro",
@@ -410,6 +477,7 @@
     "confirm": "Conferma",
     "count_warning": "Attenzione all'inserimento",
     "currency_default": "FCFA",
+    "currency_short": "F",
     "days_ago": "fa {{count}} giorni",
     "delete": "Elimina",
     "description": "Descrizione",
@@ -417,6 +485,7 @@
     "error": "Errore",
     "filter": "Filtra",
     "generate": "Genera",
+    "generic_error": "Une erreur est survenue.",
     "info": "Info",
     "items_count": "{{count}} articolo/i",
     "language_choice": "Scegli la lingua",
@@ -628,6 +697,7 @@
     "entries": "Entrate",
     "exits": "Uscite",
     "expected": "Atteso",
+    "expected_qty": "Attendu: {{qty}}",
     "expired": "Scaduto!",
     "expiry_alerts": "Avvisi Scadenza (30g)",
     "generate_tasks": "Genera nuove attività",
@@ -651,12 +721,17 @@
     "profitability_analysis": "Analisi redditività",
     "recent_alerts": "Avvisi recenti",
     "recent_sales": "Vendite recenti",
+    "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
+    "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Inventario a Rotazione",
     "see_detail_product": "Vedi il dettaglio per prodotto",
     "see_feature": "Vedi questa funzionalità",
     "see_less": "Vedi meno",
     "see_more": "Vedi di più",
     "see_more_count": "Vedi altri {{count}} prodotti critici",
+    "settings_done": "Terminer",
+    "settings_subtitle": "Activez ou désactivez les éléments que vous souhaitez voir sur votre écran d'accueil.",
+    "settings_title": "Personnaliser le Dashboard",
     "smart_reminders": "Rappels Intelligents",
     "smart_replenishment": "Rifornimento Intelligente",
     "statistics": "Statistiche",
@@ -677,7 +752,47 @@
     "today_sales": "Vendite giornaliere",
     "top_products_value": "Top prodotti (valore)",
     "total_value": "Valore totale",
-    "units": "unità"
+    "units": "unità",
+    "widget_abc_analysis": "Analyse ABC",
+    "widget_category_chart": "Répartition par catégorie",
+    "widget_expiry_alerts": "Alertes péremption",
+    "widget_forecast": "Prévisions de ventes",
+    "widget_inventory_tasks": "Tâches inventaire",
+    "widget_kpi": "KPIs (CA, Ventes, etc.)",
+    "widget_profitability": "Rentabilité par catégorie",
+    "widget_recent_alerts": "Alertes récentes",
+    "widget_recent_sales": "Dernières ventes",
+    "widget_reorder": "Réapprovisionnement",
+    "widget_smart_reminders": "Rappels intelligents",
+    "widget_stock_chart": "Évolution valeur stock",
+    "widget_stock_status": "Statut des stocks"
+  },
+  "delivery": {
+    "ai_analysis": "Analyse IA des produits...",
+    "ai_reason": "IA : {{reason}}",
+    "associate_for": "Associer : {{name}}",
+    "confirm_reception": "Confirmer la réception",
+    "confirmed_msg": "Le stock a été mis à jour.",
+    "confirmed_title": "Livraison confirmée",
+    "create_new_product": "Créer un nouveau produit",
+    "error_confirm": "Impossible de confirmer la livraison",
+    "error_load_suggestions": "Impossible de charger les suggestions",
+    "no_product_found": "Aucun produit trouvé",
+    "products_to_match": "{{count}} produit(s) à associer",
+    "search_product": "Rechercher un produit...",
+    "stock_label": "Stock:"
+  },
+  "errors": {
+    "ai_generation_error": "Impossible de générer le contenu IA",
+    "expense_deleted": "Charge supprimée",
+    "expense_not_found": "Charge non trouvée",
+    "forbidden": "Accès refusé",
+    "gemini_api_missing": "Clé API Gemini non configurée",
+    "product_not_found": "Produit non trouvé",
+    "server_error": "Erreur interne du serveur",
+    "task_not_found": "Tâche non trouvée",
+    "unauthorized": "Accès non autorisé",
+    "user_not_found": "Utilisateur non trouvé"
   },
   "help": {
     "faq": {
@@ -1410,6 +1525,7 @@
     "ai_price_info": "Il suggerimento prezzo è disponibile solo per prodotti esistenti",
     "all": "Tutti",
     "batch_number_label": "Numero di Lotto (Opzionale)",
+    "batch_number_placeholder_hint": "Ex: LOT2024-001",
     "bulk_delete_msg": "Vuoi eliminare i {{count}} prodotti selezionati?",
     "bulk_delete_title": "Eliminazione di massa",
     "camera": "Fotocamera",
@@ -1430,6 +1546,7 @@
     "confirm_inventory": "Conferma l'inventario",
     "create_error": "Impossibile creare/modificare il prodotto",
     "current_stock_label": "Stock attuale",
+    "date_format_placeholder": "AAAA-MM-JJ",
     "default_unit": "Pezzo",
     "delete": "Elim.",
     "delete_category_error": "Impossibile eliminare la categoria",
@@ -1437,12 +1554,14 @@
     "edit": "Mod.",
     "edit_category": "Modifica la categoria",
     "expiry_date_label": "Data di Scadenza (AAAA-MM-GG)",
+    "expiry_date_placeholder_hint": "Ex: 2025-12-31",
     "export_history_error": "Impossibile esportare lo storico",
     "export_products_error": "Impossibile esportare i prodotti",
     "field_description": "Description",
     "field_name": "Nom",
     "field_name_placeholder": "Nom du produit...",
     "field_sku": "SKU / Code",
+    "forecast_7d_unit": "{{count}} prédits (7j)",
     "gallery": "Galleria",
     "history": "Stor.",
     "history_tab_price": "Prezzo",
@@ -1496,8 +1615,10 @@
     "remove_photo": "Rimuovi la foto",
     "remove_stock": "-Scorte",
     "report_section_stock": "Stato dello stock",
+    "rfid_hardware_info": "La lecture RFID nécessite un matériel compatible.",
     "rfid_info_msg": "La lettura RFID richiede un hardware compatibile connesso. Puoi inserire l'ID manualmente.",
     "rfid_info_title": "RFID",
+    "rfid_reading_not_supported": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "search": "Cerca un prodotto...",
     "search_placeholder": "Rechercher un produit...",
     "see_less": "Vedi meno",
@@ -1530,6 +1651,29 @@
     "validate_out": "Convalida l'uscita",
     "variant_name_placeholder": "Nome della variante (es: XL, Rosso...)",
     "variants": "Varianti"
+  },
+  "reminders": {
+    "birthdays_desc": "Prévenir X jours avant",
+    "birthdays_label": "Anniversaires clients",
+    "client_reactivation_desc": "Clients fidèles inactifs depuis X jours",
+    "client_reactivation_label": "Réactivation clients",
+    "debt_recovery_desc": "Dettes clients dépassant le seuil",
+    "debt_recovery_label": "Recouvrement de dettes",
+    "dormant_products_desc": "Produits sans vente depuis X jours",
+    "dormant_products_label": "Produits dormants",
+    "expense_spike_desc": "Alerte si +X% vs mois précédent",
+    "expense_spike_label": "Hausse des dépenses",
+    "inventory_check_desc": "Alerte si pas d'inventaire depuis X jours",
+    "inventory_check_label": "Vérification inventaire",
+    "late_deliveries_desc": "Critique après X jours de retard",
+    "late_deliveries_label": "Livraisons en retard",
+    "monthly_report_desc": "X derniers jours du mois",
+    "monthly_report_label": "Rapport mensuel",
+    "pending_invitations_desc": "En attente depuis X jours",
+    "pending_invitations_label": "Invitations en attente",
+    "replenishment_desc": "Produits sous le stock minimum",
+    "replenishment_label": "Réapprovisionnement",
+    "unit_days": "jours"
   },
   "settings": {
     "about": "Informazioni",
@@ -1711,6 +1855,42 @@
     "revenue_this_month": "Fatturato questo mese",
     "reviews": "Recensioni",
     "top_products": "Top Prodotti"
+  },
+  "supplier_settings": {
+    "address_label": "Adresse",
+    "address_ph": "Adresse complète",
+    "application": "Application",
+    "avg_delivery_label": "Délai moyen (jours)",
+    "categories_label": "Catégories (séparées par des virgules)",
+    "categories_ph": "Alimentaire, Cosmétique, Textile...",
+    "city_label": "Ville",
+    "city_ph": "Ex: Dakar, Abidjan...",
+    "commercial_profile": "Profil commercial",
+    "company_name_label": "Nom de l'entreprise *",
+    "company_name_ph": "Nom de l'entreprise",
+    "create_profile": "Créer mon profil",
+    "days": "jours",
+    "description_label": "Description",
+    "description_ph": "Décrivez votre activité",
+    "error_company_required": "Le nom de l'entreprise est requis",
+    "error_save": "Impossible de sauvegarder le profil",
+    "info_address": "Adresse",
+    "info_avg_delivery": "Délai moyen",
+    "info_categories": "Catégories",
+    "info_city": "Ville",
+    "info_company": "Entreprise",
+    "info_description": "Description",
+    "info_min_order": "Montant min commande",
+    "info_note": "Note",
+    "info_phone": "Téléphone",
+    "info_zones": "Zones de livraison",
+    "min_order_label": "Montant min commande",
+    "page_title": "Paramètres",
+    "phone_label": "Téléphone",
+    "reviews": "avis",
+    "role_supplier": "Fournisseur",
+    "zones_label": "Zones de livraison (séparées par des virgules)",
+    "zones_ph": "Dakar, Thiès, St-Louis..."
   },
   "suppliers": {
     "add_invoice_feature": "Funzione di upload in arrivo",
