--- a/frontend/locales/tr.json
+++ b/frontend/locales/tr.json
@@ -1,4 +1,8 @@
-{
+﻿{
+  "abc": {
+    "no_revenue": "Aucun revenu généré sur la période.",
+    "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
+  },
   "accounting": {
     "amount": "Tutar",
     "amount_placeholder": "0.00",
@@ -40,6 +44,7 @@
     "invalid_amount": "Geçersiz tutar",
     "invoice_title": "FATURA",
     "items_sold": "Satılan Ürünler",
+    "last_days_label": "{{count}} derniers jours",
     "loss_details": "Kayıp detayları",
     "loss_reasons": "{{count}} kayıp nedeni",
     "losses": "Kayıplar / Hasarlar",
@@ -59,6 +64,14 @@
     "payment_methods": "Ödeme Yöntemine Göre Satışlar",
     "payment_mobile_money": "Mobil Ödeme",
     "payment_transfer": "Havale",
+    "pdf_expenses_detail": "Détail des Charges",
+    "pdf_generation_error": "Erreur lors de la génération du rapport",
+    "pdf_gross_margin": "Marge brute",
+    "pdf_no_address": "Adresse non renseignée",
+    "pdf_no_expenses": "Aucune dépense sur cette période",
+    "pdf_top_products": "Top 10 Produits par Performance",
+    "pdf_total_expenses": "Total charges",
+    "pdf_total_revenue": "CA total",
     "period_label": "Dönem:",
     "product": "Ürün",
     "product_performance": "Ürün Performansı",
@@ -233,6 +246,38 @@
       "countryLabel": "Ülke: {{country}}"
     }
   },
+  "ai": {
+    "daily_summary_prompt": "Tu es Stockman AI. Voici les activités de la journée : {activity}. Fais un résumé très court (3-4 phrases) et motivant pour le commerçant.",
+    "persona_name": "Assistant Stockman",
+    "replenishment_advice_prompt": "Tu es un expert en logistique. Voici les produits critiques : {products}. Donne des conseils de réapprovisionnement basés sur les ventes récentes.",
+    "summary_goal": "Ton but est d’aider l’utilisateur à naviguer dans l’application ET à analyser son activité.",
+    "summary_instruction_admin": "SI L’UTILISATEUR EST ADMIN, COMMENCE TA PREMIÈRE RÉPONSE PAR UN BREF RÉSUMÉ DE LA SANTÉ DU SYSTÈME SI DES ALERTES SONT PRÉSENTES.",
+    "summary_role_admin": "Tu es l’assistant personnel de l’ADMINISTRATEUR de Stockman. Tu as accès aux métriques globales.",
+    "summary_role_merchant": "Tu es l’assistant intelligent expert de l’application Stockman pour les commerçants.",
+    "summary_tone": "Adopte un ton pédagogique, professionnel et chaleureux. Tes réponses doivent être complètes et explicatives.",
+    "tools": {
+      "inventory_alerts": {
+        "empty": "Aucune alerte de stock critique.",
+        "format": "{name}: Stock={quantity} (Min={min_stock})"
+      },
+      "system_alerts": {
+        "empty": "Santé du système d’administration excellente. Aucune alerte critique.",
+        "critical_login": "CRITICAL: {count} échecs de connexion détectés en 24h. Risque de Brute-force.",
+        "support_backlog": "ALERTE: Backlog support élevé ({count} tickets ouverts)."
+      },
+      "product_info": {
+        "not_found": "Aucun produit trouvé pour '{name}'.",
+        "status_out": "En rupture",
+        "status_in": "En stock"
+      },
+      "forecast": {
+        "not_found": "Produit '{name}' non trouvé pour l’analyse.",
+        "invalid_date": "Format de date invalide. Utilisez YYYY-MM-DD."
+      }
+    },
+    "voice_to_text_error": "Impossible de transcrire l'audio",
+    "voice_to_text_prompt": "Transcris exactement ce que dit cette personne. La langue principale est {lang_name}. Répondez UNIQUEMENT avec la transcription, rien d'autre."
+  },
   "alerts": {
     "ai_anomaly_detection": "Yapay Zeka Anomali Tespiti",
     "all_good": "Her şey yolunda",
@@ -307,6 +352,9 @@
       "errorFillFields": "Lütfen tüm alanları doldurun",
       "errorLogin": "Giriş hatası"
     },
+    "logout_btn": "Se déconnecter",
+    "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
+    "logout_title": "Déconnexion",
     "register": {
       "title": "Hesap oluştur",
       "chooseProfile": "Profilinizi seçin",
@@ -355,6 +403,25 @@
       "errorIncorrect": "Geçersiz veya süresi dolmuş kod",
       "resendTip": "Yeniden gönderme özelliği yakında gelecek"
     }
+  },
+  "batch_scan": {
+    "action_required": "Action requise",
+    "apply_action": "Appliquer l'action",
+    "auto_replenish": "Réapprovisionnement auto",
+    "auto_replenish_desc": "Générer des bons de commande pour les manquants",
+    "choose_action": "Veuillez choisir une action…",
+    "items_identified": "Articles identifiés",
+    "orders_generated": "{{count}} bons de commande générés.",
+    "partial_result": "Résultat partiel",
+    "processing_title": "Traitement du lot",
+    "quick_inventory": "Inventaire rapide",
+    "quick_inventory_desc": "Marquer ces articles comme présents en stock",
+    "rfid_associate": "Association RFID",
+    "rfid_associate_desc": "Associer ces codes à des tags RFID",
+    "rfid_bulk_info": "L'association RFID par lot permet d'associer rapidement vos tags.",
+    "select_action": "Sélectionner une action",
+    "title": "Scan Rapide (Lot)",
+    "unknown_codes": "{{count}} codes sont inconnus…"
   },
   "bulk_import": {
     "back": "Geri",
@@ -423,6 +490,7 @@
     "confirm": "Onayla",
     "count_warning": "Girişe dikkat edin",
     "currency_default": "TL",
+    "currency_short": "F",
     "days_ago": "{{count}} gün önce",
     "delete": "Sil",
     "description": "Açıklama",
@@ -430,6 +498,7 @@
     "error": "Hata",
     "filter": "Filtre",
     "generate": "Oluştur",
+    "generic_error": "Une erreur est survenue.",
     "info": "Bilgi",
     "items_count": "{{count}} ürün",
     "language_choice": "Dil Seçin",
@@ -641,6 +710,7 @@
     "entries": "Girişler",
     "exits": "Çıkışlar",
     "expected": "Beklenen",
+    "expected_qty": "Attendu: {{qty}}",
     "expired": "Süresi doldu!",
     "expiry_alerts": "Sona Erme Uyarıları (30g)",
     "generate_tasks": "Yeni görevler oluştur",
@@ -664,12 +734,17 @@
     "profitability_analysis": "Kârlılık Analizi",
     "recent_alerts": "Son uyarılar",
     "recent_sales": "Son Satışlar",
+    "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
+    "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Sürekli Envanter",
     "see_detail_product": "Ürün detayını gör",
     "see_feature": "Bu özelliği gör",
     "see_less": "Daha az",
     "see_more": "Daha fazla",
     "see_more_count": "Diğer {{count}} kritik ürünü gör",
+    "settings_done": "Terminer",
+    "settings_subtitle": "Activez ou désactivez les éléments que vous souhaitez voir sur votre écran d'accueil.",
+    "settings_title": "Personnaliser le Dashboard",
     "smart_reminders": "Akıllı Hatırlatıcılar",
     "smart_replenishment": "Akıllı İkmal",
     "statistics": "İstatistikler",
@@ -690,7 +765,47 @@
     "today_sales": "Günlük Satışlar",
     "top_products_value": "En iyi ürünler (değer)",
     "total_value": "Toplam değer",
-    "units": "birim"
+    "units": "birim",
+    "widget_abc_analysis": "Analyse ABC",
+    "widget_category_chart": "Répartition par catégorie",
+    "widget_expiry_alerts": "Alertes péremption",
+    "widget_forecast": "Prévisions de ventes",
+    "widget_inventory_tasks": "Tâches inventaire",
+    "widget_kpi": "KPIs (CA, Ventes, etc.)",
+    "widget_profitability": "Rentabilité par catégorie",
+    "widget_recent_alerts": "Alertes récentes",
+    "widget_recent_sales": "Dernières ventes",
+    "widget_reorder": "Réapprovisionnement",
+    "widget_smart_reminders": "Rappels intelligents",
+    "widget_stock_chart": "Évolution valeur stock",
+    "widget_stock_status": "Statut des stocks"
+  },
+  "delivery": {
+    "ai_analysis": "Analyse IA des produits...",
+    "ai_reason": "IA : {{reason}}",
+    "associate_for": "Associer : {{name}}",
+    "confirm_reception": "Confirmer la réception",
+    "confirmed_msg": "Le stock a été mis à jour.",
+    "confirmed_title": "Livraison confirmée",
+    "create_new_product": "Créer un nouveau produit",
+    "error_confirm": "Impossible de confirmer la livraison",
+    "error_load_suggestions": "Impossible de charger les suggestions",
+    "no_product_found": "Aucun produit trouvé",
+    "products_to_match": "{{count}} produit(s) à associer",
+    "search_product": "Rechercher un produit...",
+    "stock_label": "Stock:"
+  },
+  "errors": {
+    "ai_generation_error": "Impossible de générer le contenu IA",
+    "expense_deleted": "Charge supprimée",
+    "expense_not_found": "Charge non trouvée",
+    "forbidden": "Accès refusé",
+    "gemini_api_missing": "Clé API Gemini non configurée",
+    "product_not_found": "Produit non trouvé",
+    "server_error": "Erreur interne du serveur",
+    "task_not_found": "Tâche non trouvée",
+    "unauthorized": "Accès non autorisé",
+    "user_not_found": "Utilisateur non trouvé"
   },
   "help": {
     "faq": {
@@ -1470,6 +1585,7 @@
     "ai_price_info": "Fiyat önerisi sadece mevcut ürünler için geçerlidir",
     "all": "Tümü",
     "batch_number_label": "Lot Numarası (İsteğe Bağlı)",
+    "batch_number_placeholder_hint": "Ex: LOT2024-001",
     "bulk_delete_msg": "Seçilen {{count}} ürünü silmek istiyor musunuz?",
     "bulk_delete_title": "Toplu silme",
     "camera": "Kamera",
@@ -1490,6 +1606,7 @@
     "confirm_inventory": "Envanteri onayla",
     "create_error": "Ürün oluşturulamadı/düzenlenemedi",
     "current_stock_label": "Mevcut stok",
+    "date_format_placeholder": "AAAA-MM-JJ",
     "default_unit": "Adet",
     "delete": "Sil",
     "delete_category_error": "Kategori silinemedi",
@@ -1497,12 +1614,14 @@
     "edit": "Düzenle",
     "edit_category": "Kategoriyi düzenle",
     "expiry_date_label": "Son Kullanma Tarihi (YYYY-AA-GG)",
+    "expiry_date_placeholder_hint": "Ex: 2025-12-31",
     "export_history_error": "Geçmiş dışa aktarılamadı",
     "export_products_error": "Ürünler dışa aktarılamadı",
     "field_description": "Açıklama",
     "field_name": "İsim",
     "field_name_placeholder": "Ürün adı...",
     "field_sku": "SKU / Kod",
+    "forecast_7d_unit": "{{count}} prédits (7j)",
     "gallery": "Galeri",
     "history": "Geçmiş",
     "history_tab_price": "Fiyat",
@@ -1556,8 +1675,10 @@
     "remove_photo": "Fotoğrafı kaldır",
     "remove_stock": "-Stok",
     "report_section_stock": "Stok durumu",
+    "rfid_hardware_info": "La lecture RFID nécessite un matériel compatible.",
     "rfid_info_msg": "RFID okuma, uyumlu bir donanım bağlantısı gerektirir. Kimliği manuel olarak girebilirsiniz.",
     "rfid_info_title": "RFID",
+    "rfid_reading_not_supported": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "search": "Ürün ara...",
     "search_placeholder": "Ürün ara...",
     "see_less": "Daha az gör",
@@ -1591,13 +1712,36 @@
     "variant_name_placeholder": "Varyant adı (örn: XL, Kırmızı...)",
     "variants": "Varyantlar"
   },
+  "reminders": {
+    "birthdays_desc": "Prévenir X jours avant",
+    "birthdays_label": "Anniversaires clients",
+    "client_reactivation_desc": "Clients fidèles inactifs depuis X jours",
+    "client_reactivation_label": "Réactivation clients",
+    "debt_recovery_desc": "Dettes clients dépassant le seuil",
+    "debt_recovery_label": "Recouvrement de dettes",
+    "dormant_products_desc": "Produits sans vente depuis X jours",
+    "dormant_products_label": "Produits dormants",
+    "expense_spike_desc": "Alerte si +X% vs mois précédent",
+    "expense_spike_label": "Hausse des dépenses",
+    "inventory_check_desc": "Alerte si pas d'inventaire depuis X jours",
+    "inventory_check_label": "Vérification inventaire",
+    "late_deliveries_desc": "Critique après X jours de retard",
+    "late_deliveries_label": "Livraisons en retard",
+    "monthly_report_desc": "X derniers jours du mois",
+    "monthly_report_label": "Rapport mensuel",
+    "pending_invitations_desc": "En attente depuis X jours",
+    "pending_invitations_label": "Invitations en attente",
+    "replenishment_desc": "Produits sous le stock minimum",
+    "replenishment_label": "Réapprovisionnement",
+    "unit_days": "jours"
+  },
   "settings": {
     "about": "Hakkında",
     "account": "Hesap",
     "ai_assistant": "Yapay Zeka Asistanı",
     "ai_assistant_desc": "Sağ üstteki ışıltıya tıklayın",
-    "application": "Uygulama",
     "appearance": "Görünüm",
+    "application": "Uygulama",
     "backup_data": "Verileri yedekle",
     "biometrics": "Biyometrik (Face ID / Parmak İzi)",
     "biometrics_desc": "Biyometrik tanıma kullan",
@@ -1778,6 +1922,42 @@
     "reviews": "Yorumlar",
     "top_products": "En Çok Satan Ürünler"
   },
+  "supplier_settings": {
+    "address_label": "Adresse",
+    "address_ph": "Adresse complète",
+    "application": "Application",
+    "avg_delivery_label": "Délai moyen (jours)",
+    "categories_label": "Catégories (séparées par des virgules)",
+    "categories_ph": "Alimentaire, Cosmétique, Textile...",
+    "city_label": "Ville",
+    "city_ph": "Ex: Dakar, Abidjan...",
+    "commercial_profile": "Profil commercial",
+    "company_name_label": "Nom de l'entreprise *",
+    "company_name_ph": "Nom de l'entreprise",
+    "create_profile": "Créer mon profil",
+    "days": "jours",
+    "description_label": "Description",
+    "description_ph": "Décrivez votre activité",
+    "error_company_required": "Le nom de l'entreprise est requis",
+    "error_save": "Impossible de sauvegarder le profil",
+    "info_address": "Adresse",
+    "info_avg_delivery": "Délai moyen",
+    "info_categories": "Catégories",
+    "info_city": "Ville",
+    "info_company": "Entreprise",
+    "info_description": "Description",
+    "info_min_order": "Montant min commande",
+    "info_note": "Note",
+    "info_phone": "Téléphone",
+    "info_zones": "Zones de livraison",
+    "min_order_label": "Montant min commande",
+    "page_title": "Paramètres",
+    "phone_label": "Téléphone",
+    "reviews": "avis",
+    "role_supplier": "Fournisseur",
+    "zones_label": "Zones de livraison (séparées par des virgules)",
+    "zones_ph": "Dakar, Thiès, St-Louis..."
+  },
   "suppliers": {
     "add_invoice_feature": "Yükleme özelliği yakında",
     "add_note": "Not Ekle",
@@ -1940,6 +2120,10 @@
     "users": "Kullanıcılar"
   },
   "users": {
+    "access_denied": "Accès refusé.",
+    "account_created_title": "Compte créé",
+    "accounting_label": "Comptabilité",
+    "cancel_btn": "Annuler",
     "create_account_btn": "Hesap oluştur",
     "crm_label": "Müşteriler (CRM)",
     "delete_btn": "Sil",
