--- a/frontend/locales/wo.json
+++ b/frontend/locales/wo.json
@@ -1,4 +1,8 @@
 ﻿{
+  "abc": {
+    "no_revenue": "Aucun revenu généré sur la période.",
+    "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
+  },
   "accounting": {
     "amount": "Lim bi",
     "amount_placeholder": "0.00",
@@ -40,6 +44,7 @@
     "invalid_amount": "Lim bi baaxul",
     "invoice_title": "FAKTIIR",
     "items_sold": "Liggéey yu jaayiku",
+    "last_days_label": "{{count}} derniers jours",
     "loss_details": "Lëeralu yàq yi",
     "loss_reasons": "{{count}} laayu yàq",
     "losses": "Yàq / Sànni",
@@ -59,6 +64,14 @@
     "payment_methods": "Fey ci...",
     "payment_mobile_money": "Mobile Money",
     "payment_transfer": "Wersma",
+    "pdf_expenses_detail": "Détail des Charges",
+    "pdf_generation_error": "Erreur lors de la génération du rapport",
+    "pdf_gross_margin": "Marge brute",
+    "pdf_no_address": "Adresse non renseignée",
+    "pdf_no_expenses": "Aucune dépense sur cette période",
+    "pdf_top_products": "Top 10 Produits par Performance",
+    "pdf_total_expenses": "Total charges",
+    "pdf_total_revenue": "CA total",
     "period_label": "Jamono:",
     "product": "Produit",
     "product_performance": "Performance Produit",
@@ -233,6 +246,38 @@
       "countryLabel": "Réew: {{country}}"
     }
   },
+  "ai": {
+    "daily_summary_prompt": "Tu es Stockman AI. Voici les activités de la journée : {activity}. Fais un résumé très court (3-4 phrases) et motivant pour le commerçant.",
+    "persona_name": "Assistant Stockman",
+    "replenishment_advice_prompt": "Tu es un expert en logistique. Voici les produits critiques : {products}. Donne des conseils de réapprovisionnement basés sur les ventes récentes.",
+    "summary_goal": "Ton but est d’aider l’utilisateur à naviguer dans l’application ET à analyser son activité.",
+    "summary_instruction_admin": "SI L’UTILISATEUR EST ADMIN, COMMENCE TA PREMIÈRE RÉPONSE PAR UN BREF RÉSUMÉ DE LA SANTÉ DU SYSTÈME SI DES ALERTES SONT PRÉSENTES.",
+    "summary_role_admin": "Tu es l’assistant personnel de l’ADMINISTRATEUR de Stockman. Tu as accès aux métriques globales.",
+    "summary_role_merchant": "Tu es l’assistant intelligent expert de l’application Stockman pour les commerçants.",
+    "summary_tone": "Adopte un ton pédagogique, professionnel et chaleureux. Tes réponses doivent être complètes et explicatives.",
+    "tools": {
+      "inventory_alerts": {
+        "empty": "Aucune alerte de stock critique.",
+        "format": "{name}: Stock={quantity} (Min={min_stock})"
+      },
+      "system_alerts": {
+        "empty": "Santé du système d’administration excellente. Aucune alerte critique.",
+        "critical_login": "CRITICAL: {count} échecs de connexion détectés en 24h. Risque de Brute-force.",
+        "support_backlog": "ALERTE: Backlog support élevé ({count} tickets ouverts)."
+      },
+      "product_info": {
+        "not_found": "Aucun produit trouvé pour '{name}'.",
+        "status_out": "En rupture",
+        "status_in": "En stock"
+      },
+      "forecast": {
+        "not_found": "Produit '{name}' non trouvé pour l’analyse.",
+        "invalid_date": "Format de date invalide. Utilisez YYYY-MM-DD."
+      }
+    },
+    "voice_to_text_error": "Impossible de transcrire l'audio",
+    "voice_to_text_prompt": "Transcris exactement ce que dit cette personne. La langue principale est {lang_name}. Répondez UNIQUEMENT avec la transcription, rien d'autre."
+  },
   "alerts": {
     "ai_anomaly_detection": "IA bu xam anomali",
     "all_good": "Lépp baax na",
@@ -307,6 +352,9 @@
       "errorFillFields": "Baal ma farlu xarale yépp",
       "errorLogin": "Njuumte ci dugg bi"
     },
+    "logout_btn": "Se déconnecter",
+    "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
+    "logout_title": "Déconnexion",
     "register": {
       "title": "Sos ab compte",
       "chooseProfile": "Tann sa profil",
@@ -355,6 +403,25 @@
       "errorIncorrect": "Code bi baaxul walla jeex na",
       "resendTip": "Yónne gannaaw dina am ci kanam"
     }
+  },
+  "batch_scan": {
+    "action_required": "Action requise",
+    "apply_action": "Appliquer l'action",
+    "auto_replenish": "Réapprovisionnement auto",
+    "auto_replenish_desc": "Générer des bons de commande pour les manquants",
+    "choose_action": "Veuillez choisir une action…",
+    "items_identified": "Articles identifiés",
+    "orders_generated": "{{count}} bons de commande générés.",
+    "partial_result": "Résultat partiel",
+    "processing_title": "Traitement du lot",
+    "quick_inventory": "Inventaire rapide",
+    "quick_inventory_desc": "Marquer ces articles comme présents en stock",
+    "rfid_associate": "Association RFID",
+    "rfid_associate_desc": "Associer ces codes à des tags RFID",
+    "rfid_bulk_info": "L'association RFID par lot permet d'associer rapidement vos tags.",
+    "select_action": "Sélectionner une action",
+    "title": "Scan Rapide (Lot)",
+    "unknown_codes": "{{count}} codes sont inconnus…"
   },
   "bulk_import": {
     "back": "Dellu",
@@ -423,6 +490,7 @@
     "confirm": "Dëggal",
     "count_warning": "Moytul lim yi",
     "currency_default": "FCFA",
+    "currency_short": "F",
     "days_ago": "{{count}} fan ci gannaaw",
     "delete": "Far",
     "description": "Ndefu",
@@ -430,6 +498,7 @@
     "error": "Njuumte",
     "filter": "Sancoon",
     "generate": "Génne",
+    "generic_error": "Une erreur est survenue.",
     "info": "Xamle",
     "items_count": "{{count}} liggéey",
     "language_choice": "Tann làmmeñ bi",
@@ -641,6 +710,7 @@
     "entries": "Dugg",
     "exits": "Génne",
     "expected": "Liñu yaakaar",
+    "expected_qty": "Liñu yaakaar: {{qty}}",
     "expired": "Jeex na!",
     "expiry_alerts": "Xam-xam (Jeex)",
     "generate_tasks": "Génne liggéey yu bees",
@@ -664,12 +734,17 @@
     "profitability_analysis": "Saytu njaay mi",
     "recent_alerts": "Xam-xam yi mujj",
     "recent_sales": "Jaay yi mujj",
+    "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
+    "reorder_suggested": "Ndigal: +{{qty}}",
     "rotating_inventory": "Wañ Stock",
     "see_detail_product": "Gis lëeralu liggéey bi",
     "see_feature": "Xool xarale bii",
     "see_less": "Wone ko gën a néew",
     "see_more": "Wone ko gën a bare",
     "see_more_count": "Gis {{count}} yeneen liggéey",
+    "settings_done": "Jeex",
+    "settings_subtitle": "Doxal walla tëj xarale yi nga bëgg gis ci sa ekran.",
+    "settings_title": "Soppi Panoo bi",
     "smart_reminders": "Fattali bu xaragne",
     "smart_replenishment": "Yokk stock bu xaragne",
     "statistics": "Lim yi",
@@ -690,7 +765,47 @@
     "today_sales": "Jaay tay",
     "top_products_value": "Liggéey yi gën (Njeeg)",
     "total_value": "Njeeg yépp",
-    "units": "bokk"
+    "units": "bokk",
+    "widget_abc_analysis": "Saytu ABC",
+    "widget_category_chart": "Seddale ci xeet",
+    "widget_expiry_alerts": "Xam-xam jeex",
+    "widget_forecast": "Xam-xam jaay yi di ñëw",
+    "widget_inventory_tasks": "Liggéey wañ yi",
+    "widget_kpi": "KPI yi (Njeeg, Jaay, jpp.)",
+    "widget_profitability": "Nafoore ci xeet",
+    "widget_recent_alerts": "Xam-xam yi mujj",
+    "widget_recent_sales": "Jaay yi mujj",
+    "widget_reorder": "Yokk Stock",
+    "widget_smart_reminders": "Fattali bu xaragne",
+    "widget_stock_chart": "Doxaliinu stock bi",
+    "widget_stock_status": "État stock bi"
+  },
+  "delivery": {
+    "ai_analysis": "Analyse IA des produits...",
+    "ai_reason": "IA : {{reason}}",
+    "associate_for": "Associer : {{name}}",
+    "confirm_reception": "Confirmer la réception",
+    "confirmed_msg": "Le stock a été mis à jour.",
+    "confirmed_title": "Livraison confirmée",
+    "create_new_product": "Créer un nouveau produit",
+    "error_confirm": "Impossible de confirmer la livraison",
+    "error_load_suggestions": "Impossible de charger les suggestions",
+    "no_product_found": "Aucun produit trouvé",
+    "products_to_match": "{{count}} produit(s) à associer",
+    "search_product": "Rechercher un produit...",
+    "stock_label": "Stock:"
+  },
+  "errors": {
+    "ai_generation_error": "Impossible de générer le contenu IA",
+    "expense_deleted": "Charge supprimée",
+    "expense_not_found": "Charge non trouvée",
+    "forbidden": "Accès refusé",
+    "gemini_api_missing": "Clé API Gemini non configurée",
+    "product_not_found": "Produit non trouvé",
+    "server_error": "Erreur interne du serveur",
+    "task_not_found": "Tâche non trouvée",
+    "unauthorized": "Accès non autorisé",
+    "user_not_found": "Utilisateur non trouvé"
   },
   "help": {
     "faq": {
@@ -1439,6 +1554,7 @@
     "ai_price_info": "Ndigalu njëg bi liggéey yu am biir rekk la",
     "all": "Yépp",
     "batch_number_label": "Numero Lot (Su neexee)",
+    "batch_number_placeholder_hint": "Ex: LOT2024-001",
     "bulk_delete_msg": "Dëgg nga bëgg far {{count}} liggéey yi?",
     "bulk_delete_title": "Far yu bari",
     "camera": "Camera",
@@ -1459,6 +1575,7 @@
     "confirm_inventory": "Dëggal lim bi",
     "create_error": "Mënuloo sos/soppi liggéey bi",
     "current_stock_label": "Stock bi nekk",
+    "date_format_placeholder": "AAAA-MM-JJ",
     "default_unit": "Benn",
     "delete": "Far",
     "delete_category_error": "Mënuloo far xeet bi",
@@ -1466,12 +1583,14 @@
     "edit": "Soppi",
     "edit_category": "Soppi xeet bi",
     "expiry_date_label": "Date Jeex (AAAA-MM-JJ)",
+    "expiry_date_placeholder_hint": "Ex: 2025-12-31",
     "export_history_error": "Mënuloo génne jaar-jaar yi",
     "export_products_error": "Mënuloo génne liggéey yi",
     "field_description": "Lëeral",
     "field_name": "Tur",
     "field_name_placeholder": "Turu liggéey bi...",
     "field_sku": "SKU / Code",
+    "forecast_7d_unit": "{{count}} prédits (7j)",
     "gallery": "Galerie",
     "history": "Jaar-jaar",
     "history_tab_price": "Njëg",
@@ -1525,8 +1644,10 @@
     "remove_photo": "Dindi foto bi",
     "remove_stock": "-Stock",
     "report_section_stock": "Tëddu stock bi",
+    "rfid_hardware_info": "La lecture RFID nécessite un matériel compatible.",
     "rfid_info_msg": "Jàngukaay RFID dafa laj matériel. Mën nga bind ID bi.",
     "rfid_info_title": "RFID",
+    "rfid_reading_not_supported": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "search": "Seetal...",
     "search_placeholder": "Seetal liggéey...",
     "see_less": "Gis lu néew",
@@ -1559,6 +1680,29 @@
     "validate_out": "Dëggal génn bi",
     "variant_name_placeholder": "Tur variante (Misaal: XL, Xonk...)",
     "variants": "Variantes"
+  },
+  "reminders": {
+    "birthdays_desc": "Fattaliku X fan laata",
+    "birthdays_label": "Besu juddu kilyan",
+    "client_reactivation_desc": "Kilyan yi doxul ci X fan",
+    "client_reactivation_label": "Doxal kilyan yi",
+    "debt_recovery_desc": "Bor yi gën ci seuil bi",
+    "debt_recovery_label": "Jot bor yi",
+    "dormant_products_desc": "Liggéey yu jaayikuwul ci X fan",
+    "dormant_products_label": "Liggéey yu nelaw",
+    "expense_spike_desc": "Xam-xam su yokk +X% ci weer wi ci kanam",
+    "expense_spike_label": "Yokk dépense",
+    "inventory_check_desc": "Xam-xam su wañ nekkul ci X fan",
+    "inventory_check_label": "Saytu wañ",
+    "late_deliveries_desc": "Bu jeex X fan ñu nëbbu",
+    "late_deliveries_label": "Yónneef yu njëkk",
+    "monthly_report_desc": "X fan yi mujj ci weer wi",
+    "monthly_report_label": "Rapport weeru",
+    "pending_invitations_desc": "Yu xaar dimb X fan",
+    "pending_invitations_label": "Mëssaale yu xaar",
+    "replenishment_desc": "Liggéey yi ci suufu stock minimum",
+    "replenishment_label": "Yokk Stock",
+    "unit_days": "fan"
   },
   "settings": {
     "about": "Ci mbirum",
@@ -1740,6 +1884,42 @@
     "revenue_this_month": "CA weer wii",
     "reviews": "Kaddu",
     "top_products": "Liggéey yu siw"
+  },
+  "supplier_settings": {
+    "address_label": "Adresse",
+    "address_ph": "Adresse complète",
+    "application": "Application",
+    "avg_delivery_label": "Délai moyen (jours)",
+    "categories_label": "Catégories (séparées par des virgules)",
+    "categories_ph": "Alimentaire, Cosmétique, Textile...",
+    "city_label": "Ville",
+    "city_ph": "Ex: Dakar, Abidjan...",
+    "commercial_profile": "Profil commercial",
+    "company_name_label": "Nom de l'entreprise *",
+    "company_name_ph": "Nom de l'entreprise",
+    "create_profile": "Créer mon profil",
+    "days": "jours",
+    "description_label": "Description",
+    "description_ph": "Décrivez votre activité",
+    "error_company_required": "Le nom de l'entreprise est requis",
+    "error_save": "Impossible de sauvegarder le profil",
+    "info_address": "Adresse",
+    "info_avg_delivery": "Délai moyen",
+    "info_categories": "Catégories",
+    "info_city": "Ville",
+    "info_company": "Entreprise",
+    "info_description": "Description",
+    "info_min_order": "Montant min commande",
+    "info_note": "Note",
+    "info_phone": "Téléphone",
+    "info_zones": "Zones de livraison",
+    "min_order_label": "Montant min commande",
+    "page_title": "Paramètres",
+    "phone_label": "Téléphone",
+    "reviews": "avis",
+    "role_supplier": "Fournisseur",
+    "zones_label": "Zones de livraison (séparées par des virgules)",
+    "zones_ph": "Dakar, Thiès, St-Louis..."
   },
   "suppliers": {
     "add_invoice_feature": "Upload dina ñëw",
