--- a/frontend/locales/zh.json
+++ b/frontend/locales/zh.json
@@ -1,4 +1,8 @@
-{
+﻿{
+  "abc": {
+    "no_revenue": "Aucun revenu généré sur la période.",
+    "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
+  },
   "accounting": {
     "amount": "金额",
     "amount_placeholder": "0.00",
@@ -40,6 +44,7 @@
     "invalid_amount": "无效金额",
     "invoice_title": "发票",
     "items_sold": "已售商品",
+    "last_days_label": "{{count}} derniers jours",
     "loss_details": "损失详情",
     "loss_reasons": "{{count}} 个损失原因",
     "losses": "损失 / 损坏",
@@ -59,6 +64,14 @@
     "payment_methods": "按支付方式统计",
     "payment_mobile_money": "移动支付",
     "payment_transfer": "转账",
+    "pdf_expenses_detail": "Détail des Charges",
+    "pdf_generation_error": "Erreur lors de la génération du rapport",
+    "pdf_gross_margin": "Marge brute",
+    "pdf_no_address": "Adresse non renseignée",
+    "pdf_no_expenses": "Aucune dépense sur cette période",
+    "pdf_top_products": "Top 10 Produits par Performance",
+    "pdf_total_expenses": "Total charges",
+    "pdf_total_revenue": "CA total",
     "period_label": "期间：",
     "product": "产品",
     "product_performance": "产品业绩",
@@ -233,6 +246,38 @@
       "countryLabel": "国家: {{country}}"
     }
   },
+  "ai": {
+    "daily_summary_prompt": "Tu es Stockman AI. Voici les activités de la journée : {activity}. Fais un résumé très court (3-4 phrases) et motivant pour le commerçant.",
+    "persona_name": "Assistant Stockman",
+    "replenishment_advice_prompt": "Tu es un expert en logistique. Voici les produits critiques : {products}. Donne des conseils de réapprovisionnement basés sur les ventes récentes.",
+    "summary_goal": "Ton but est d’aider l’utilisateur à naviguer dans l’application ET à analyser son activité.",
+    "summary_instruction_admin": "SI L’UTILISATEUR EST ADMIN, COMMENCE TA PREMIÈRE RÉPONSE PAR UN BREF RÉSUMÉ DE LA SANTÉ DU SYSTÈME SI DES ALERTES SONT PRÉSENTES.",
+    "summary_role_admin": "Tu es l’assistant personnel de l’ADMINISTRATEUR de Stockman. Tu as accès aux métriques globales.",
+    "summary_role_merchant": "Tu es l’assistant intelligent expert de l’application Stockman pour les commerçants.",
+    "summary_tone": "Adopte un ton pédagogique, professionnel et chaleureux. Tes réponses doivent être complètes et explicatives.",
+    "tools": {
+      "inventory_alerts": {
+        "empty": "Aucune alerte de stock critique.",
+        "format": "{name}: Stock={quantity} (Min={min_stock})"
+      },
+      "system_alerts": {
+        "empty": "Santé du système d’administration excellente. Aucune alerte critique.",
+        "critical_login": "CRITICAL: {count} échecs de connexion détectés en 24h. Risque de Brute-force.",
+        "support_backlog": "ALERTE: Backlog support élevé ({count} tickets ouverts)."
+      },
+      "product_info": {
+        "not_found": "Aucun produit trouvé pour '{name}'.",
+        "status_out": "En rupture",
+        "status_in": "En stock"
+      },
+      "forecast": {
+        "not_found": "Produit '{name}' non trouvé pour l’analyse.",
+        "invalid_date": "Format de date invalide. Utilisez YYYY-MM-DD."
+      }
+    },
+    "voice_to_text_error": "Impossible de transcrire l'audio",
+    "voice_to_text_prompt": "Transcris exactement ce que dit cette personne. La langue principale est {lang_name}. Répondez UNIQUEMENT avec la transcription, rien d'autre."
+  },
   "alerts": {
     "ai_anomaly_detection": "人工智能异常检测",
     "all_good": "一切正常",
@@ -307,6 +352,9 @@
       "errorFillFields": "请填写所有字段",
       "errorLogin": "登录错误"
     },
+    "logout_btn": "Se déconnecter",
+    "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
+    "logout_title": "Déconnexion",
     "register": {
       "title": "创建账户",
       "chooseProfile": "选择您的个人资料",
@@ -355,6 +403,25 @@
       "errorIncorrect": "验证码错误或已过期",
       "resendTip": "重发功能即将推出"
     }
+  },
+  "batch_scan": {
+    "action_required": "Action requise",
+    "apply_action": "Appliquer l'action",
+    "auto_replenish": "Réapprovisionnement auto",
+    "auto_replenish_desc": "Générer des bons de commande pour les manquants",
+    "choose_action": "Veuillez choisir une action…",
+    "items_identified": "Articles identifiés",
+    "orders_generated": "{{count}} bons de commande générés.",
+    "partial_result": "Résultat partiel",
+    "processing_title": "Traitement du lot",
+    "quick_inventory": "Inventaire rapide",
+    "quick_inventory_desc": "Marquer ces articles comme présents en stock",
+    "rfid_associate": "Association RFID",
+    "rfid_associate_desc": "Associer ces codes à des tags RFID",
+    "rfid_bulk_info": "L'association RFID par lot permet d'associer rapidement vos tags.",
+    "select_action": "Sélectionner une action",
+    "title": "Scan Rapide (Lot)",
+    "unknown_codes": "{{count}} codes sont inconnus…"
   },
   "bulk_import": {
     "back": "返回",
@@ -423,6 +490,7 @@
     "confirm": "确认",
     "count_warning": "输入警告",
     "currency_default": "FCFA",
+    "currency_short": "F",
     "days_ago": "{{count}} 天前",
     "delete": "删除",
     "description": "描述",
@@ -430,6 +498,7 @@
     "error": "错误",
     "filter": "筛选",
     "generate": "生成",
+    "generic_error": "Une erreur est survenue.",
     "info": "信息",
     "items_count": "{{count}} 个项目",
     "language_choice": "选择语言",
@@ -641,6 +710,7 @@
     "entries": "Entries",
     "exits": "Exits",
     "expected": "Expected",
+    "expected_qty": "Attendu: {{qty}}",
     "expired": "Expired!",
     "expiry_alerts": "Expiry Alerts (30d)",
     "generate_tasks": "Generate new tasks",
@@ -664,12 +734,17 @@
     "profitability_analysis": "盈利分析",
     "recent_alerts": "Recent alerts",
     "recent_sales": "近期销售",
+    "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
+    "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Rotating Inventory",
     "see_detail_product": "Voir le détail par produit",
     "see_feature": "See this feature",
     "see_less": "收起",
     "see_more": "查看更多",
     "see_more_count": "See {{count}} other critical products",
+    "settings_done": "Terminer",
+    "settings_subtitle": "Activez ou désactivez les éléments que vous souhaitez voir sur votre écran d'accueil.",
+    "settings_title": "Personnaliser le Dashboard",
     "smart_reminders": "Rappels Intelligents",
     "smart_replenishment": "Smart Replenishment",
     "statistics": "Statistics",
@@ -690,7 +765,47 @@
     "today_sales": "日销售",
     "top_products_value": "Top products (value)",
     "total_value": "Total value",
-    "units": "units"
+    "units": "units",
+    "widget_abc_analysis": "Analyse ABC",
+    "widget_category_chart": "Répartition par catégorie",
+    "widget_expiry_alerts": "Alertes péremption",
+    "widget_forecast": "Prévisions de ventes",
+    "widget_inventory_tasks": "Tâches inventaire",
+    "widget_kpi": "KPIs (CA, Ventes, etc.)",
+    "widget_profitability": "Rentabilité par catégorie",
+    "widget_recent_alerts": "Alertes récentes",
+    "widget_recent_sales": "Dernières ventes",
+    "widget_reorder": "Réapprovisionnement",
+    "widget_smart_reminders": "Rappels intelligents",
+    "widget_stock_chart": "Évolution valeur stock",
+    "widget_stock_status": "Statut des stocks"
+  },
+  "delivery": {
+    "ai_analysis": "Analyse IA des produits...",
+    "ai_reason": "IA : {{reason}}",
+    "associate_for": "Associer : {{name}}",
+    "confirm_reception": "Confirmer la réception",
+    "confirmed_msg": "Le stock a été mis à jour.",
+    "confirmed_title": "Livraison confirmée",
+    "create_new_product": "Créer un nouveau produit",
+    "error_confirm": "Impossible de confirmer la livraison",
+    "error_load_suggestions": "Impossible de charger les suggestions",
+    "no_product_found": "Aucun produit trouvé",
+    "products_to_match": "{{count}} produit(s) à associer",
+    "search_product": "Rechercher un produit...",
+    "stock_label": "Stock:"
+  },
+  "errors": {
+    "ai_generation_error": "Impossible de générer le contenu IA",
+    "expense_deleted": "Charge supprimée",
+    "expense_not_found": "Charge non trouvée",
+    "forbidden": "Accès refusé",
+    "gemini_api_missing": "Clé API Gemini non configurée",
+    "product_not_found": "Produit non trouvé",
+    "server_error": "Erreur interne du serveur",
+    "task_not_found": "Tâche non trouvée",
+    "unauthorized": "Accès non autorisé",
+    "user_not_found": "Utilisateur non trouvé"
   },
   "help": {
     "faq": {
@@ -1376,6 +1491,7 @@
     "title": "收银台 (POS)",
     "total": "Total",
     "unknown": "Inconnu",
+    "unknown_product_msg": "Aucun produit trouvé avec le SKU: {{sku}}",
     "unknown_product_title": "Produit inconnu"
   },
   "premium": {
@@ -1437,6 +1553,7 @@
     "ai_price_info": "价格建议仅适用于现有产品",
     "all": "全部",
     "batch_number_label": "批次编号 (可选)",
+    "batch_number_placeholder_hint": "Ex: LOT2024-001",
     "bulk_delete_msg": "确定要删除所选的 {{count}} 个产品吗？",
     "bulk_delete_title": "批量删除",
     "camera": "摄像头",
@@ -1457,6 +1574,7 @@
     "confirm_inventory": "确认盘点",
     "create_error": "无法创建/修改产品",
     "current_stock_label": "当前库存",
+    "date_format_placeholder": "AAAA-MM-JJ",
     "default_unit": "件",
     "delete": "删除",
     "delete_category_error": "无法删除类别",
@@ -1464,12 +1582,14 @@
     "edit": "编辑",
     "edit_category": "修改类别",
     "expiry_date_label": "过期日期 (YYYY-MM-DD)",
+    "expiry_date_placeholder_hint": "Ex: 2025-12-31",
     "export_history_error": "无法导出历史记录",
     "export_products_error": "无法导出产品",
     "field_description": "描述",
     "field_name": "名称",
     "field_name_placeholder": "产品名称...",
     "field_sku": "SKU / 条码",
+    "forecast_7d_unit": "{{count}} prédits (7j)",
     "gallery": "相册",
     "history": "历史",
     "history_tab_price": "价格",
@@ -1523,8 +1643,10 @@
     "remove_photo": "删除图片",
     "remove_stock": "-库存",
     "report_section_stock": "库存状态",
+    "rfid_hardware_info": "La lecture RFID nécessite un matériel compatible.",
     "rfid_info_msg": "读取 RFID 需要连接兼容硬件。您可以手动输入 ID。",
     "rfid_info_title": "RFID",
+    "rfid_reading_not_supported": "La lecture RFID nécessite un matériel compatible connecté. Vous pouvez saisir l'ID manuellement.",
     "search": "搜索产品...",
     "search_placeholder": "搜索产品...",
     "see_less": "收起",
@@ -1557,6 +1679,29 @@
     "validate_out": "确认出库",
     "variant_name_placeholder": "变体名称 (例如：XL, 红色...)",
     "variants": "变体"
+  },
+  "reminders": {
+    "birthdays_desc": "Prévenir X jours avant",
+    "birthdays_label": "Anniversaires clients",
+    "client_reactivation_desc": "Clients fidèles inactifs depuis X jours",
+    "client_reactivation_label": "Réactivation clients",
+    "debt_recovery_desc": "Dettes clients dépassant le seuil",
+    "debt_recovery_label": "Recouvrement de dettes",
+    "dormant_products_desc": "Produits sans vente depuis X jours",
+    "dormant_products_label": "Produits dormants",
+    "expense_spike_desc": "Alerte si +X% vs mois précédent",
+    "expense_spike_label": "Hausse des dépenses",
+    "inventory_check_desc": "Alerte si pas d'inventaire depuis X jours",
+    "inventory_check_label": "Vérification inventaire",
+    "late_deliveries_desc": "Critique après X jours de retard",
+    "late_deliveries_label": "Livraisons en retard",
+    "monthly_report_desc": "X derniers jours du mois",
+    "monthly_report_label": "Rapport mensuel",
+    "pending_invitations_desc": "En attente depuis X jours",
+    "pending_invitations_label": "Invitations en attente",
+    "replenishment_desc": "Produits sous le stock minimum",
+    "replenishment_label": "Réapprovisionnement",
+    "unit_days": "jours"
   },
   "settings": {
     "about": "关于",
@@ -1738,6 +1883,42 @@
     "revenue_this_month": "本月收入",
     "reviews": "评价",
     "top_products": "热销产品"
+  },
+  "supplier_settings": {
+    "address_label": "Adresse",
+    "address_ph": "Adresse complète",
+    "application": "Application",
+    "avg_delivery_label": "Délai moyen (jours)",
+    "categories_label": "Catégories (séparées par des virgules)",
+    "categories_ph": "Alimentaire, Cosmétique, Textile...",
+    "city_label": "Ville",
+    "city_ph": "Ex: Dakar, Abidjan...",
+    "commercial_profile": "Profil commercial",
+    "company_name_label": "Nom de l'entreprise *",
+    "company_name_ph": "Nom de l'entreprise",
+    "create_profile": "Créer mon profil",
+    "days": "jours",
+    "description_label": "Description",
+    "description_ph": "Décrivez votre activité",
+    "error_company_required": "Le nom de l'entreprise est requis",
+    "error_save": "Impossible de sauvegarder le profil",
+    "info_address": "Adresse",
+    "info_avg_delivery": "Délai moyen",
+    "info_categories": "Catégories",
+    "info_city": "Ville",
+    "info_company": "Entreprise",
+    "info_description": "Description",
+    "info_min_order": "Montant min commande",
+    "info_note": "Note",
+    "info_phone": "Téléphone",
+    "info_zones": "Zones de livraison",
+    "min_order_label": "Montant min commande",
+    "page_title": "Paramètres",
+    "phone_label": "Téléphone",
+    "reviews": "avis",
+    "role_supplier": "Fournisseur",
+    "zones_label": "Zones de livraison (séparées par des virgules)",
+    "zones_ph": "Dakar, Thiès, St-Louis..."
   },
   "suppliers": {
     "add_invoice_feature": "上传发票功能即将推出",
